Format YAML files

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -8,18 +8,18 @@ phases:
       python: 3.8
       nodejs: 12
     commands:
-      - 'cd $(ls -d */|head -n 1)'
-      - 'cd notifications/slack && npm install && cd ../../'
-      - 'npm install'
-      - 'pip3 install -r requirements.txt'
+      - "cd $(ls -d */|head -n 1)"
+      - "cd notifications/slack && npm install && cd ../../"
+      - "npm install"
+      - "pip3 install -r requirements.txt"
   build:
     commands:
       - 'find . -name "*.yml" -type f ! -path "./node_modules/*" -mindepth 2 -print0 | xargs -0 -n1 cfn-lint --ignore-checks W --template'
-      - 'python3.8 -m black --check ./'
-      - 'python3.8 -m flake8'
-      - 'npm run tsc'
+      - "python3.8 -m black --check ./"
+      - "python3.8 -m flake8"
+      - "npm run tsc"
       - 'npm run eslint -- "**/*.js"'
-      - 'npm run prettier -- --check "**/*.{js,json}"'
+      - 'npm run prettier -- --check "**/*.{js,json,yml}"'
   post_build:
-      commands:
-        - 'curl -sO "https://raw.githubusercontent.com/PRX/Infrastructure/master/ci/utility/post_build.sh" && chmod +x post_build.sh && bash ./post_build.sh'
+    commands:
+      - 'curl -sO "https://raw.githubusercontent.com/PRX/Infrastructure/master/ci/utility/post_build.sh" && chmod +x post_build.sh && bash ./post_build.sh'
