--- a/cd/cd.yml
+++ b/cd/cd.yml
@@ -86,8 +86,7 @@ Resources:
               - sns:Publish
             Effect: Allow
             Resource:
-              - Fn::ImportValue:
-                  !Sub "${InfrastructureNotificationsStackName}-SlackMessageRelaySnsTopicArn"
+              - Fn::ImportValue: !Sub "${InfrastructureNotificationsStackName}-SlackMessageRelaySnsTopicArn"
   CodePipelineJobResultWriteAccessPolicy:
     Type: AWS::IAM::ManagedPolicy
     Properties:
@@ -229,11 +228,9 @@ Resources:
       Environment:
         Variables:
           IKE_DEPLOYS_SLACK_WEBHOOK_URL:
-            Fn::ImportValue:
-              !Sub ${InfrastructureNotificationsStackName}-IkeDeploysSlackSlackWebhookUrl
+            Fn::ImportValue: !Sub ${InfrastructureNotificationsStackName}-IkeDeploysSlackSlackWebhookUrl
           SLACK_MESSAGE_RELAY_TOPIC_ARN:
-            Fn::ImportValue:
-                !Sub ${InfrastructureNotificationsStackName}-SlackMessageRelaySnsTopicArn
+            Fn::ImportValue: !Sub ${InfrastructureNotificationsStackName}-SlackMessageRelaySnsTopicArn
       Events:
         SnsMessages:
           Properties:
@@ -267,14 +264,11 @@ Resources:
       ActionsEnabled: true
       AlarmName: "[Infra][CD][Lambda][Error] Pipeline Approval Notification"
       AlarmActions:
-        - Fn::ImportValue:
-            !Sub "${InfrastructureNotificationsStackName}-OpsWarnMessagesSnsTopicArn"
+        - Fn::ImportValue: !Sub "${InfrastructureNotificationsStackName}-OpsWarnMessagesSnsTopicArn"
       InsufficientDataActions:
-        - Fn::ImportValue:
-            !Sub "${InfrastructureNotificationsStackName}-OpsWarnMessagesSnsTopicArn"
+        - Fn::ImportValue: !Sub "${InfrastructureNotificationsStackName}-OpsWarnMessagesSnsTopicArn"
       OKActions:
-        - Fn::ImportValue:
-            !Sub "${InfrastructureNotificationsStackName}-OpsWarnMessagesSnsTopicArn"
+        - Fn::ImportValue: !Sub "${InfrastructureNotificationsStackName}-OpsWarnMessagesSnsTopicArn"
       AlarmDescription: >-
         The error rate on the approval notification handler lambda has exceeded
         0 in the last minute.
@@ -500,8 +494,7 @@ Resources:
               Configuration:
                 PollForSourceChanges: false
                 S3Bucket:
-                  Fn::ImportValue:
-                    !Sub ${InfrastructureStorageStackName}-InfrastructureConfigBucket
+                  Fn::ImportValue: !Sub ${InfrastructureStorageStackName}-InfrastructureConfigBucket
                 S3ObjectKey: !Ref InfrastructureConfigStagingKey
               OutputArtifacts:
                 - Name: TemplateConfigStagingZipArtifact
@@ -773,8 +766,7 @@ Resources:
       Environment:
         Variables:
           SLACK_MESSAGE_RELAY_TOPIC_ARN:
-            Fn::ImportValue:
-              !Sub ${InfrastructureNotificationsStackName}-SlackMessageRelaySnsTopicArn
+            Fn::ImportValue: !Sub ${InfrastructureNotificationsStackName}-SlackMessageRelaySnsTopicArn
       Events:
         PipelineEvents:
           Properties:
@@ -828,14 +820,11 @@ Resources:
       ActionsEnabled: true
       AlarmName: "[Infra][CD][Lambda][Error] Pipeline Events Handler"
       AlarmActions:
-        - Fn::ImportValue:
-            !Sub "${InfrastructureNotificationsStackName}-OpsWarnMessagesSnsTopicArn"
+        - Fn::ImportValue: !Sub "${InfrastructureNotificationsStackName}-OpsWarnMessagesSnsTopicArn"
       InsufficientDataActions:
-        - Fn::ImportValue:
-            !Sub "${InfrastructureNotificationsStackName}-OpsWarnMessagesSnsTopicArn"
+        - Fn::ImportValue: !Sub "${InfrastructureNotificationsStackName}-OpsWarnMessagesSnsTopicArn"
       OKActions:
-        - Fn::ImportValue:
-            !Sub "${InfrastructureNotificationsStackName}-OpsWarnMessagesSnsTopicArn"
+        - Fn::ImportValue: !Sub "${InfrastructureNotificationsStackName}-OpsWarnMessagesSnsTopicArn"
       AlarmDescription: >-
         The error rate on the pipeline events handler lambda has exceeded
         0 in the last minute.
@@ -892,7 +881,7 @@ Resources:
   CdPipelineS3TriggerTrail:
     Type: AWS::CloudTrail::Trail
     DependsOn:
-        - CdPipelineS3TriggerTrailStoreBucketPolicy
+      - CdPipelineS3TriggerTrailStoreBucketPolicy
     Properties:
       EventSelectors:
         - DataResources:
@@ -901,8 +890,7 @@ Resources:
                 - Fn::Sub:
                     - arn:aws:s3:::${BucketName}/
                     - BucketName:
-                        Fn::ImportValue:
-                          !Sub ${InfrastructureStorageStackName}-InfrastructureConfigBucket
+                        Fn::ImportValue: !Sub ${InfrastructureStorageStackName}-InfrastructureConfigBucket
           IncludeManagementEvents: false
           ReadWriteType: WriteOnly
       IsLogging: true
@@ -966,8 +954,7 @@ Resources:
               }
             }
           - BucketName:
-              Fn::ImportValue:
-                !Sub ${InfrastructureStorageStackName}-InfrastructureConfigBucket
+              Fn::ImportValue: !Sub ${InfrastructureStorageStackName}-InfrastructureConfigBucket
             ObjectId: !Ref InfrastructureConfigStagingKey
       State: ENABLED
       Targets:
@@ -1204,8 +1191,7 @@ Resources:
       Environment:
         Variables:
           SLACK_MESSAGE_RELAY_TOPIC_ARN:
-            Fn::ImportValue:
-              !Sub ${InfrastructureNotificationsStackName}-SlackMessageRelaySnsTopicArn
+            Fn::ImportValue: !Sub ${InfrastructureNotificationsStackName}-SlackMessageRelaySnsTopicArn
           CD_STACK_NAME: !Ref AWS::StackName
       Handler: lambda_function.lambda_handler
       MemorySize: 128
@@ -1230,14 +1216,11 @@ Resources:
       ActionsEnabled: true
       AlarmName: "[Infra][CD][Lambda][Error] Change Set Diff Notification"
       AlarmActions:
-        - Fn::ImportValue:
-            !Sub ${InfrastructureNotificationsStackName}-OpsWarnMessagesSnsTopicArn
+        - Fn::ImportValue: !Sub ${InfrastructureNotificationsStackName}-OpsWarnMessagesSnsTopicArn
       InsufficientDataActions:
-        - Fn::ImportValue:
-            !Sub ${InfrastructureNotificationsStackName}-OpsWarnMessagesSnsTopicArn
+        - Fn::ImportValue: !Sub ${InfrastructureNotificationsStackName}-OpsWarnMessagesSnsTopicArn
       OKActions:
-        - Fn::ImportValue:
-            !Sub ${InfrastructureNotificationsStackName}-OpsWarnMessagesSnsTopicArn
+        - Fn::ImportValue: !Sub ${InfrastructureNotificationsStackName}-OpsWarnMessagesSnsTopicArn
       AlarmDescription: >-
         The error rate on the diff notification lambda has exceeded 0 in
         the last minute.
@@ -1261,12 +1244,10 @@ Resources:
       Environment:
         Variables:
           SLACK_MESSAGE_RELAY_TOPIC_ARN:
-            Fn::ImportValue:
-              !Sub ${InfrastructureNotificationsStackName}-SlackMessageRelaySnsTopicArn
+            Fn::ImportValue: !Sub ${InfrastructureNotificationsStackName}-SlackMessageRelaySnsTopicArn
           CD_STACK_NAME: !Ref AWS::StackName
           INFRASTRUCTURE_CONFIG_BUCKET:
-            Fn::ImportValue:
-              !Sub ${InfrastructureStorageStackName}-InfrastructureConfigBucket
+            Fn::ImportValue: !Sub ${InfrastructureStorageStackName}-InfrastructureConfigBucket
           INFRASTRUCTURE_CONFIG_PRODUCTION_KEY: !Ref InfrastructureConfigProductionKey
           INFRASTRUCTURE_CONFIG_STAGING_KEY: !Ref InfrastructureConfigStagingKey
       Handler: lambda_function.lambda_handler
@@ -1294,14 +1275,11 @@ Resources:
       ActionsEnabled: true
       AlarmName: "[Infra][CD][Lambda][Error] Deploy Notification"
       AlarmActions:
-        - Fn::ImportValue:
-            !Sub ${InfrastructureNotificationsStackName}-OpsWarnMessagesSnsTopicArn
+        - Fn::ImportValue: !Sub ${InfrastructureNotificationsStackName}-OpsWarnMessagesSnsTopicArn
       InsufficientDataActions:
-        - Fn::ImportValue:
-            !Sub ${InfrastructureNotificationsStackName}-OpsWarnMessagesSnsTopicArn
+        - Fn::ImportValue: !Sub ${InfrastructureNotificationsStackName}-OpsWarnMessagesSnsTopicArn
       OKActions:
-        - Fn::ImportValue:
-            !Sub ${InfrastructureNotificationsStackName}-OpsWarnMessagesSnsTopicArn
+        - Fn::ImportValue: !Sub ${InfrastructureNotificationsStackName}-OpsWarnMessagesSnsTopicArn
       AlarmDescription: >-
         The error rate on the deploy notification lambda has exceeded 0 in
         the last minute.
@@ -1325,12 +1303,10 @@ Resources:
       Environment:
         Variables:
           INFRASTRUCTURE_CONFIG_BUCKET:
-            Fn::ImportValue:
-              !Sub ${InfrastructureStorageStackName}-InfrastructureConfigBucket
+            Fn::ImportValue: !Sub ${InfrastructureStorageStackName}-InfrastructureConfigBucket
           INFRASTRUCTURE_CONFIG_PRODUCTION_KEY: !Ref InfrastructureConfigProductionKey
           INFRASTRUCTURE_SNAPSHOTS_BUCKET:
-            Fn::ImportValue:
-              !Sub ${InfrastructureStorageStackName}-InfrastructureSnapshotsBucket
+            Fn::ImportValue: !Sub ${InfrastructureStorageStackName}-InfrastructureSnapshotsBucket
       Handler: index.handler
       MemorySize: 256
       Policies:
@@ -1354,14 +1330,11 @@ Resources:
       ActionsEnabled: true
       AlarmName: "[Infra][CD][Lambda][Error] Environment State Capture"
       AlarmActions:
-        - Fn::ImportValue:
-            !Sub ${InfrastructureNotificationsStackName}-OpsWarnMessagesSnsTopicArn
+        - Fn::ImportValue: !Sub ${InfrastructureNotificationsStackName}-OpsWarnMessagesSnsTopicArn
       InsufficientDataActions:
-        - Fn::ImportValue:
-            !Sub ${InfrastructureNotificationsStackName}-OpsWarnMessagesSnsTopicArn
+        - Fn::ImportValue: !Sub ${InfrastructureNotificationsStackName}-OpsWarnMessagesSnsTopicArn
       OKActions:
-        - Fn::ImportValue:
-            !Sub ${InfrastructureNotificationsStackName}-OpsWarnMessagesSnsTopicArn
+        - Fn::ImportValue: !Sub ${InfrastructureNotificationsStackName}-OpsWarnMessagesSnsTopicArn
       AlarmDescription: >-
         The error rate on the state capture lambda has exceeded 0 in
         the last minute.
@@ -1385,8 +1358,7 @@ Resources:
       Environment:
         Variables:
           INFRASTRUCTURE_CONFIG_BUCKET:
-            Fn::ImportValue:
-              !Sub ${InfrastructureStorageStackName}-InfrastructureConfigBucket
+            Fn::ImportValue: !Sub ${InfrastructureStorageStackName}-InfrastructureConfigBucket
           INFRASTRUCTURE_CONFIG_PRODUCTION_KEY: !Ref InfrastructureConfigProductionKey
       Handler: lambda_function.lambda_handler
       MemorySize: 256
@@ -1412,14 +1384,11 @@ Resources:
       ActionsEnabled: true
       AlarmName: "[Infra][CD][Lambda][Error] Pseudo Source"
       AlarmActions:
-        - Fn::ImportValue:
-            !Sub ${InfrastructureNotificationsStackName}-OpsWarnMessagesSnsTopicArn
+        - Fn::ImportValue: !Sub ${InfrastructureNotificationsStackName}-OpsWarnMessagesSnsTopicArn
       InsufficientDataActions:
-        - Fn::ImportValue:
-            !Sub ${InfrastructureNotificationsStackName}-OpsWarnMessagesSnsTopicArn
+        - Fn::ImportValue: !Sub ${InfrastructureNotificationsStackName}-OpsWarnMessagesSnsTopicArn
       OKActions:
-        - Fn::ImportValue:
-            !Sub ${InfrastructureNotificationsStackName}-OpsWarnMessagesSnsTopicArn
+        - Fn::ImportValue: !Sub ${InfrastructureNotificationsStackName}-OpsWarnMessagesSnsTopicArn
       AlarmDescription: >-
         The error rate on the pseudo source lambda has exceeded 0 in
         the last minute.
@@ -1442,8 +1411,7 @@ Resources:
       Environment:
         Variables:
           INFRASTRUCTURE_SOURCE_BUCKET:
-            Fn::ImportValue:
-              !Sub ${InfrastructureStorageStackName}-InfrastructureSourceBucket
+            Fn::ImportValue: !Sub ${InfrastructureStorageStackName}-InfrastructureSourceBucket
       Handler: lambda_function.lambda_handler
       MemorySize: 256
       Policies:
@@ -1467,14 +1435,11 @@ Resources:
       ActionsEnabled: true
       AlarmName: "[Infra][CD][Lambda][Error] S3 Sync"
       AlarmActions:
-        - Fn::ImportValue:
-            !Sub ${InfrastructureNotificationsStackName}-OpsWarnMessagesSnsTopicArn
+        - Fn::ImportValue: !Sub ${InfrastructureNotificationsStackName}-OpsWarnMessagesSnsTopicArn
       InsufficientDataActions:
-        - Fn::ImportValue:
-            !Sub ${InfrastructureNotificationsStackName}-OpsWarnMessagesSnsTopicArn
+        - Fn::ImportValue: !Sub ${InfrastructureNotificationsStackName}-OpsWarnMessagesSnsTopicArn
       OKActions:
-        - Fn::ImportValue:
-            !Sub ${InfrastructureNotificationsStackName}-OpsWarnMessagesSnsTopicArn
+        - Fn::ImportValue: !Sub ${InfrastructureNotificationsStackName}-OpsWarnMessagesSnsTopicArn
       AlarmDescription: >-
         The error rate on the S3 Sync lambda has exceeded 0 in
         the last minute.
