--- a/cdn/dovetail-cdn.yml
+++ b/cdn/dovetail-cdn.yml
@@ -107,7 +107,7 @@ Resources:
             - EventType: viewer-response
               LambdaFunctionARN: !Ref LambdaBytesFunctionArn
           TargetOriginId: dovetail-stitch-s3
-          ViewerProtocolPolicy : allow-all
+          ViewerProtocolPolicy: allow-all
         DefaultRootObject: index.html
         Enabled: true
         HttpVersion: http2
@@ -144,14 +144,11 @@ Resources:
       ActionsEnabled: true
       AlarmName: !Join ["", ["[", !Ref DistributionDomain, "][ErrorRate] 4XX"]]
       AlarmActions:
-        - Fn::ImportValue:
-            !Sub "${InfrastructureNotificationsStackName}-OpsWarnMessagesSnsTopicArn"
+        - Fn::ImportValue: !Sub "${InfrastructureNotificationsStackName}-OpsWarnMessagesSnsTopicArn"
       InsufficientDataActions:
-        - Fn::ImportValue:
-            !Sub "${InfrastructureNotificationsStackName}-OpsWarnMessagesSnsTopicArn"
+        - Fn::ImportValue: !Sub "${InfrastructureNotificationsStackName}-OpsWarnMessagesSnsTopicArn"
       OKActions:
-        - Fn::ImportValue:
-            !Sub "${InfrastructureNotificationsStackName}-OpsWarnMessagesSnsTopicArn"
+        - Fn::ImportValue: !Sub "${InfrastructureNotificationsStackName}-OpsWarnMessagesSnsTopicArn"
       AlarmDescription: >
         The 4xx rate on the Dovetail stitch CDN is too dang high
       ComparisonOperator: GreaterThanThreshold
@@ -174,14 +171,11 @@ Resources:
       ActionsEnabled: true
       AlarmName: !Join ["", ["[", !Ref DistributionDomain, "][ErrorRate] 5XX"]]
       AlarmActions:
-        - Fn::ImportValue:
-            !Sub "${InfrastructureNotificationsStackName}-OpsWarnMessagesSnsTopicArn"
+        - Fn::ImportValue: !Sub "${InfrastructureNotificationsStackName}-OpsWarnMessagesSnsTopicArn"
       InsufficientDataActions:
-        - Fn::ImportValue:
-            !Sub "${InfrastructureNotificationsStackName}-OpsWarnMessagesSnsTopicArn"
+        - Fn::ImportValue: !Sub "${InfrastructureNotificationsStackName}-OpsWarnMessagesSnsTopicArn"
       OKActions:
-        - Fn::ImportValue:
-            !Sub "${InfrastructureNotificationsStackName}-OpsWarnMessagesSnsTopicArn"
+        - Fn::ImportValue: !Sub "${InfrastructureNotificationsStackName}-OpsWarnMessagesSnsTopicArn"
       AlarmDescription: >
         The error rate on the Dovetail stitch CDN is too dang high
       ComparisonOperator: GreaterThanThreshold
@@ -204,14 +198,11 @@ Resources:
       ActionsEnabled: true
       AlarmName: !Join ["", ["[", !Ref DistributionDomain, "][ErrorRate] Fatal 5XX"]]
       AlarmActions:
-        - Fn::ImportValue:
-            !Sub "${InfrastructureNotificationsStackName}-OpsFatalMessagesSnsTopicArn"
+        - Fn::ImportValue: !Sub "${InfrastructureNotificationsStackName}-OpsFatalMessagesSnsTopicArn"
       InsufficientDataActions:
-        - Fn::ImportValue:
-            !Sub "${InfrastructureNotificationsStackName}-OpsFatalMessagesSnsTopicArn"
+        - Fn::ImportValue: !Sub "${InfrastructureNotificationsStackName}-OpsFatalMessagesSnsTopicArn"
       OKActions:
-        - Fn::ImportValue:
-            !Sub "${InfrastructureNotificationsStackName}-OpsFatalMessagesSnsTopicArn"
+        - Fn::ImportValue: !Sub "${InfrastructureNotificationsStackName}-OpsFatalMessagesSnsTopicArn"
       AlarmDescription: >
         The error rate on the Dovetail stitch CDN is too dang high
       ComparisonOperator: GreaterThanThreshold
