--- a/cdn/dovetail-cdn/dovetail-stitch-lambda-filters.yml
+++ b/cdn/dovetail-cdn/dovetail-stitch-lambda-filters.yml
@@ -94,7 +94,7 @@ Resources:
   LambdaRedirectMetric:
     Type: "AWS::Logs::MetricFilter"
     Properties:
-      FilterPattern: '{ $.location = * }'
+      FilterPattern: "{ $.location = * }"
       LogGroupName: !Ref LambdaLogGroup
       MetricTransformations:
         - MetricName: !Sub "dt_lambda_${EnvironmentTypeAbbreviation}_redirect"
@@ -143,16 +143,12 @@ Resources:
       ActionsEnabled: true
       AlarmName: !Sub "[DovetailStitchLambda][Errors] ${EnvironmentType} > 1"
       AlarmActions:
-        - Fn::ImportValue:
-            !Sub "${InfrastructureNotificationsStackName}-OpsWarnMessagesSnsTopicArn"
+        - Fn::ImportValue: !Sub "${InfrastructureNotificationsStackName}-OpsWarnMessagesSnsTopicArn"
       InsufficientDataActions:
-        - Fn::ImportValue:
-            !Sub "${InfrastructureNotificationsStackName}-OpsWarnMessagesSnsTopicArn"
+        - Fn::ImportValue: !Sub "${InfrastructureNotificationsStackName}-OpsWarnMessagesSnsTopicArn"
       OKActions:
-        - Fn::ImportValue:
-            !Sub "${InfrastructureNotificationsStackName}-OpsWarnMessagesSnsTopicArn"
-      AlarmDescription:
-        Errors on the dovetail stitch lambda exceeded 1
+        - Fn::ImportValue: !Sub "${InfrastructureNotificationsStackName}-OpsWarnMessagesSnsTopicArn"
+      AlarmDescription: Errors on the dovetail stitch lambda exceeded 1
       ComparisonOperator: GreaterThanThreshold
       EvaluationPeriods: 2
       MetricName: Errors
@@ -171,16 +167,12 @@ Resources:
       ActionsEnabled: true
       AlarmName: !Sub "[DovetailStitchLambda][ManyErrors] ${EnvironmentType}"
       AlarmActions:
-        - Fn::ImportValue:
-            !Sub "${InfrastructureNotificationsStackName}-OpsErrorMessagesSnsTopicArn"
+        - Fn::ImportValue: !Sub "${InfrastructureNotificationsStackName}-OpsErrorMessagesSnsTopicArn"
       InsufficientDataActions:
-        - Fn::ImportValue:
-            !Sub "${InfrastructureNotificationsStackName}-OpsErrorMessagesSnsTopicArn"
+        - Fn::ImportValue: !Sub "${InfrastructureNotificationsStackName}-OpsErrorMessagesSnsTopicArn"
       OKActions:
-        - Fn::ImportValue:
-            !Sub "${InfrastructureNotificationsStackName}-OpsErrorMessagesSnsTopicArn"
-      AlarmDescription:
-        Way too many errors on the dovetail stitch lambda
+        - Fn::ImportValue: !Sub "${InfrastructureNotificationsStackName}-OpsErrorMessagesSnsTopicArn"
+      AlarmDescription: Way too many errors on the dovetail stitch lambda
       ComparisonOperator: GreaterThanThreshold
       EvaluationPeriods: 2
       MetricName: Errors
@@ -200,27 +192,20 @@ Resources:
       AlarmName: !Sub "[DovetailStitchLambda][Throttles] ${EnvironmentType} > 0"
       AlarmActions:
         - Fn::If:
-          - IsProduction
-          - Fn::ImportValue:
-              !Sub "${InfrastructureNotificationsStackName}-OpsErrorMessagesSnsTopicArn"
-          - Fn::ImportValue:
-              !Sub "${InfrastructureNotificationsStackName}-OpsWarnMessagesSnsTopicArn"
+            - IsProduction
+            - Fn::ImportValue: !Sub "${InfrastructureNotificationsStackName}-OpsErrorMessagesSnsTopicArn"
+            - Fn::ImportValue: !Sub "${InfrastructureNotificationsStackName}-OpsWarnMessagesSnsTopicArn"
       InsufficientDataActions:
         - Fn::If:
-          - IsProduction
-          - Fn::ImportValue:
-              !Sub "${InfrastructureNotificationsStackName}-OpsErrorMessagesSnsTopicArn"
-          - Fn::ImportValue:
-              !Sub "${InfrastructureNotificationsStackName}-OpsWarnMessagesSnsTopicArn"
+            - IsProduction
+            - Fn::ImportValue: !Sub "${InfrastructureNotificationsStackName}-OpsErrorMessagesSnsTopicArn"
+            - Fn::ImportValue: !Sub "${InfrastructureNotificationsStackName}-OpsWarnMessagesSnsTopicArn"
       OKActions:
         - Fn::If:
-          - IsProduction
-          - Fn::ImportValue:
-              !Sub "${InfrastructureNotificationsStackName}-OpsErrorMessagesSnsTopicArn"
-          - Fn::ImportValue:
-              !Sub "${InfrastructureNotificationsStackName}-OpsWarnMessagesSnsTopicArn"
-      AlarmDescription:
-        Throttles on the dovetail stitch lambda exceeded 0
+            - IsProduction
+            - Fn::ImportValue: !Sub "${InfrastructureNotificationsStackName}-OpsErrorMessagesSnsTopicArn"
+            - Fn::ImportValue: !Sub "${InfrastructureNotificationsStackName}-OpsWarnMessagesSnsTopicArn"
+      AlarmDescription: Throttles on the dovetail stitch lambda exceeded 0
       ComparisonOperator: GreaterThanThreshold
       EvaluationPeriods: 1
       MetricName: Throttles
@@ -240,27 +225,20 @@ Resources:
       AlarmName: !Sub "[DovetailStitchLambda][LogErrors] ${EnvironmentType} > 0"
       AlarmActions:
         - Fn::If:
-          - IsProduction
-          - Fn::ImportValue:
-              !Sub "${InfrastructureNotificationsStackName}-OpsErrorMessagesSnsTopicArn"
-          - Fn::ImportValue:
-              !Sub "${InfrastructureNotificationsStackName}-OpsWarnMessagesSnsTopicArn"
+            - IsProduction
+            - Fn::ImportValue: !Sub "${InfrastructureNotificationsStackName}-OpsErrorMessagesSnsTopicArn"
+            - Fn::ImportValue: !Sub "${InfrastructureNotificationsStackName}-OpsWarnMessagesSnsTopicArn"
       InsufficientDataActions:
         - Fn::If:
-          - IsProduction
-          - Fn::ImportValue:
-              !Sub "${InfrastructureNotificationsStackName}-OpsErrorMessagesSnsTopicArn"
-          - Fn::ImportValue:
-              !Sub "${InfrastructureNotificationsStackName}-OpsWarnMessagesSnsTopicArn"
+            - IsProduction
+            - Fn::ImportValue: !Sub "${InfrastructureNotificationsStackName}-OpsErrorMessagesSnsTopicArn"
+            - Fn::ImportValue: !Sub "${InfrastructureNotificationsStackName}-OpsWarnMessagesSnsTopicArn"
       OKActions:
         - Fn::If:
-          - IsProduction
-          - Fn::ImportValue:
-              !Sub "${InfrastructureNotificationsStackName}-OpsErrorMessagesSnsTopicArn"
-          - Fn::ImportValue:
-              !Sub "${InfrastructureNotificationsStackName}-OpsWarnMessagesSnsTopicArn"
-      AlarmDescription:
-        Logged errors on dovetail stitch lambda exceeded 0
+            - IsProduction
+            - Fn::ImportValue: !Sub "${InfrastructureNotificationsStackName}-OpsErrorMessagesSnsTopicArn"
+            - Fn::ImportValue: !Sub "${InfrastructureNotificationsStackName}-OpsWarnMessagesSnsTopicArn"
+      AlarmDescription: Logged errors on dovetail stitch lambda exceeded 0
       ComparisonOperator: GreaterThanThreshold
       EvaluationPeriods: 1
       MetricName: !Sub "dt_lambda_${EnvironmentTypeAbbreviation}_error"
@@ -276,16 +254,12 @@ Resources:
       ActionsEnabled: true
       AlarmName: !Sub "[DovetailStitchLambda][Timeouts] ${EnvironmentType} > 1"
       AlarmActions:
-        - Fn::ImportValue:
-            !Sub "${InfrastructureNotificationsStackName}-OpsWarnMessagesSnsTopicArn"
+        - Fn::ImportValue: !Sub "${InfrastructureNotificationsStackName}-OpsWarnMessagesSnsTopicArn"
       InsufficientDataActions:
-        - Fn::ImportValue:
-            !Sub "${InfrastructureNotificationsStackName}-OpsWarnMessagesSnsTopicArn"
+        - Fn::ImportValue: !Sub "${InfrastructureNotificationsStackName}-OpsWarnMessagesSnsTopicArn"
       OKActions:
-        - Fn::ImportValue:
-            !Sub "${InfrastructureNotificationsStackName}-OpsWarnMessagesSnsTopicArn"
-      AlarmDescription:
-        Timeouts on dovetail stitch lambda exceeded 1
+        - Fn::ImportValue: !Sub "${InfrastructureNotificationsStackName}-OpsWarnMessagesSnsTopicArn"
+      AlarmDescription: Timeouts on dovetail stitch lambda exceeded 1
       ComparisonOperator: GreaterThanThreshold
       EvaluationPeriods: 2
       MetricName: !Sub "dt_lambda_${EnvironmentTypeAbbreviation}_timeout"
@@ -301,16 +275,12 @@ Resources:
       ActionsEnabled: true
       AlarmName: !Sub "[DovetailStitchLambda][ManyTimeouts] ${EnvironmentType}"
       AlarmActions:
-        - Fn::ImportValue:
-            !Sub "${InfrastructureNotificationsStackName}-OpsErrorMessagesSnsTopicArn"
+        - Fn::ImportValue: !Sub "${InfrastructureNotificationsStackName}-OpsErrorMessagesSnsTopicArn"
       InsufficientDataActions:
-        - Fn::ImportValue:
-            !Sub "${InfrastructureNotificationsStackName}-OpsErrorMessagesSnsTopicArn"
+        - Fn::ImportValue: !Sub "${InfrastructureNotificationsStackName}-OpsErrorMessagesSnsTopicArn"
       OKActions:
-        - Fn::ImportValue:
-            !Sub "${InfrastructureNotificationsStackName}-OpsErrorMessagesSnsTopicArn"
-      AlarmDescription:
-        Way too many timeouts on the dovetail stitch lambda
+        - Fn::ImportValue: !Sub "${InfrastructureNotificationsStackName}-OpsErrorMessagesSnsTopicArn"
+      AlarmDescription: Way too many timeouts on the dovetail stitch lambda
       ComparisonOperator: GreaterThanThreshold
       EvaluationPeriods: 2
       MetricName: !Sub "dt_lambda_${EnvironmentTypeAbbreviation}_timeout"
