--- a/cdn/feed-cdn.yml
+++ b/cdn/feed-cdn.yml
@@ -177,7 +177,7 @@ Resources:
         Aliases:
           - !Ref FeedDomain
         # CacheBehaviors:
-          # CacheBehavior
+        # CacheBehavior
         Comment: !Ref CloudFrontComment
         # CustomErrorResponses:
         #   CustomErrorResponse
@@ -211,18 +211,17 @@ Resources:
           TargetOriginId: feed-origin
           # TrustedSigners:
           #   - String
-          ViewerProtocolPolicy : redirect-to-https
+          ViewerProtocolPolicy: redirect-to-https
         # DefaultRootObject: "index.html"
         Enabled: true
         HttpVersion: http2
         IPV6Enabled: true
-        Logging:
-          !If
-            - HasCloudFrontLoggingBucket
-            - Bucket: !Ref CloudFrontLoggingBucket
-              IncludeCookies: false
-              Prefix: !If [HasCloudFrontLoggingBucketPrefix, !Ref CloudFrontLoggingBucketPrefix, !Ref "AWS::NoValue"]
-            - !Ref AWS::NoValue
+        Logging: !If
+          - HasCloudFrontLoggingBucket
+          - Bucket: !Ref CloudFrontLoggingBucket
+            IncludeCookies: false
+            Prefix: !If [HasCloudFrontLoggingBucketPrefix, !Ref CloudFrontLoggingBucketPrefix, !Ref "AWS::NoValue"]
+          - !Ref AWS::NoValue
         Origins:
           - CustomOriginConfig:
               # HTTPPort: Integer
