--- a/cdn/s3-origin.yml
+++ b/cdn/s3-origin.yml
@@ -179,7 +179,7 @@ Resources:
       DistributionConfig:
         Aliases: !Ref Cnames
         # CacheBehaviors:
-          # CacheBehavior
+        # CacheBehavior
         Comment: !Ref CloudFrontComment
         CustomErrorResponses:
           - ErrorCachingMinTTL: 300
@@ -209,18 +209,17 @@ Resources:
           TargetOriginId: s3-origin
           # TrustedSigners:
           #   - String
-          ViewerProtocolPolicy : redirect-to-https
+          ViewerProtocolPolicy: redirect-to-https
         DefaultRootObject: !If [HasCloudFrontDefaultRootObject, !Ref "CloudFrontDefaultRootObject", !Ref "AWS::NoValue"]
         Enabled: true
         HttpVersion: http2
         IPV6Enabled: true
-        Logging:
-          !If
-            - HasCloudFrontLoggingBucket
-            - Bucket: !Ref CloudFrontLoggingBucket
-              IncludeCookies: false
-              Prefix: !If [HasCloudFrontLoggingBucketPrefix, !Ref "CloudFrontLoggingBucketPrefix", !Ref "AWS::NoValue"]
-            - !Ref "AWS::NoValue"
+        Logging: !If
+          - HasCloudFrontLoggingBucket
+          - Bucket: !Ref CloudFrontLoggingBucket
+            IncludeCookies: false
+            Prefix: !If [HasCloudFrontLoggingBucketPrefix, !Ref "CloudFrontLoggingBucketPrefix", !Ref "AWS::NoValue"]
+          - !Ref "AWS::NoValue"
         Origins:
           - DomainName: !Ref OriginBucket
             Id: s3-origin
