--- a/ci/ci.yml
+++ b/ci/ci.yml
@@ -168,10 +168,8 @@ Resources:
                 Resource:
                   - "*" # TODO
       ManagedPolicyArns:
-        - Fn::ImportValue:
-            !Sub ${InfrastructureSecretsStackName}-SecretsInstanceAccessPolicyArn
-        - Fn::ImportValue:
-            !Sub ${InfrastructureSecretsStackName}-SecretsInstanceDecryptPolicyArn
+        - Fn::ImportValue: !Sub ${InfrastructureSecretsStackName}-SecretsInstanceAccessPolicyArn
+        - Fn::ImportValue: !Sub ${InfrastructureSecretsStackName}-SecretsInstanceDecryptPolicyArn
       Tags:
         - Key: Project
           Value: Infrastructure
@@ -214,8 +212,7 @@ Resources:
             Value: !Ref AWS::AccountId
           - Name: PRX_APPLICATION_CODE_BUCKET
             Value:
-              Fn::ImportValue:
-                !Sub ${InfrastructureStorageStackName}-InfrastructureApplicationCodeBucket
+              Fn::ImportValue: !Sub ${InfrastructureStorageStackName}-InfrastructureApplicationCodeBucket
         Image: aws/codebuild/amazonlinux2-x86_64-standard:3.0
         PrivilegedMode: true
         Type: LINUX_CONTAINER
@@ -356,14 +353,11 @@ Resources:
       ActionsEnabled: true
       AlarmName: "[Infra][CI][Lambda][Errors] GitHub Webhook Endpoint"
       AlarmActions:
-        - Fn::ImportValue:
-            !Sub ${InfrastructureNotificationsStackName}-OpsWarnMessagesSnsTopicArn
+        - Fn::ImportValue: !Sub ${InfrastructureNotificationsStackName}-OpsWarnMessagesSnsTopicArn
       InsufficientDataActions:
-        - Fn::ImportValue:
-            !Sub ${InfrastructureNotificationsStackName}-OpsWarnMessagesSnsTopicArn
+        - Fn::ImportValue: !Sub ${InfrastructureNotificationsStackName}-OpsWarnMessagesSnsTopicArn
       OKActions:
-        - Fn::ImportValue:
-            !Sub ${InfrastructureNotificationsStackName}-OpsWarnMessagesSnsTopicArn
+        - Fn::ImportValue: !Sub ${InfrastructureNotificationsStackName}-OpsWarnMessagesSnsTopicArn
       AlarmDescription: >-
         The error rate on the GitHub webhook endpoint lambda has exceeded 0 in
         the last five minutes.
@@ -450,12 +444,12 @@ Resources:
       Description: Handles GitHub events forwarded from the endpoint
       Environment:
         Variables:
-            GITHUB_ACCESS_TOKEN: !Ref GitHubToken
-            CI_STATUS_TOPIC_ARN: !Ref CiStatusSnsTopic
-            CODEBUILD_PROJECT_NAME: !Ref CiCodeBuildProject
-            CODEBUILD_SOURCE_ARCHIVE_BUCKET: !Ref CiCodeBuildSourceArchiveBucket
-            CODEBUILD_SOURCE_ARCHIVE_KEY: !FindInMap [Shared, SourceArchives, Key]
-            AWS_ACCOUNT_ID: !Ref AWS::AccountId
+          GITHUB_ACCESS_TOKEN: !Ref GitHubToken
+          CI_STATUS_TOPIC_ARN: !Ref CiStatusSnsTopic
+          CODEBUILD_PROJECT_NAME: !Ref CiCodeBuildProject
+          CODEBUILD_SOURCE_ARCHIVE_BUCKET: !Ref CiCodeBuildSourceArchiveBucket
+          CODEBUILD_SOURCE_ARCHIVE_KEY: !FindInMap [Shared, SourceArchives, Key]
+          AWS_ACCOUNT_ID: !Ref AWS::AccountId
       Events:
         SnsMessages:
           Properties:
@@ -481,14 +475,11 @@ Resources:
       ActionsEnabled: true
       AlarmName: "[Infra][CI][Lambda][Errors] GitHub Event Handler"
       AlarmActions:
-        - Fn::ImportValue:
-            !Sub ${InfrastructureNotificationsStackName}-OpsWarnMessagesSnsTopicArn
+        - Fn::ImportValue: !Sub ${InfrastructureNotificationsStackName}-OpsWarnMessagesSnsTopicArn
       InsufficientDataActions:
-        - Fn::ImportValue:
-            !Sub ${InfrastructureNotificationsStackName}-OpsWarnMessagesSnsTopicArn
+        - Fn::ImportValue: !Sub ${InfrastructureNotificationsStackName}-OpsWarnMessagesSnsTopicArn
       OKActions:
-        - Fn::ImportValue:
-            !Sub ${InfrastructureNotificationsStackName}-OpsWarnMessagesSnsTopicArn
+        - Fn::ImportValue: !Sub ${InfrastructureNotificationsStackName}-OpsWarnMessagesSnsTopicArn
       AlarmDescription: >-
         The error rate on the GitHub event handler lambda has exceeded 0 in
         the last five minutes.
@@ -569,8 +560,7 @@ Resources:
                   - sns:Publish
                 Resource:
                   - !Ref CiStatusSnsTopic
-                  - Fn::ImportValue:
-                      !Sub ${InfrastructureNotificationsStackName}-SlackMessageRelaySnsTopicArn
+                  - Fn::ImportValue: !Sub ${InfrastructureNotificationsStackName}-SlackMessageRelaySnsTopicArn
       ManagedPolicyArns:
         - arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole
       Tags:
@@ -590,11 +580,9 @@ Resources:
           CI_STATUS_TOPIC_ARN: !Ref CiStatusSnsTopic
           GITHUB_ACCESS_TOKEN: !Ref GitHubToken
           SLACK_MESSAGE_RELAY_TOPIC_ARN:
-            Fn::ImportValue:
-                !Sub ${InfrastructureNotificationsStackName}-SlackMessageRelaySnsTopicArn
+            Fn::ImportValue: !Sub ${InfrastructureNotificationsStackName}-SlackMessageRelaySnsTopicArn
           INFRASTRUCTURE_CONFIG_BUCKET:
-            Fn::ImportValue:
-              !Sub ${InfrastructureStorageStackName}-InfrastructureConfigBucket
+            Fn::ImportValue: !Sub ${InfrastructureStorageStackName}-InfrastructureConfigBucket
           INFRASTRUCTURE_CONFIG_STAGING_KEY: !Ref InfrastructureConfigStagingKey
       Events:
         SnsMessages:
@@ -621,14 +609,11 @@ Resources:
       ActionsEnabled: true
       AlarmName: "[Infra][CI][Lambda][Errors] CodeBuild Callback Handler"
       AlarmActions:
-        - Fn::ImportValue:
-            !Sub ${InfrastructureNotificationsStackName}-OpsWarnMessagesSnsTopicArn
+        - Fn::ImportValue: !Sub ${InfrastructureNotificationsStackName}-OpsWarnMessagesSnsTopicArn
       InsufficientDataActions:
-        - Fn::ImportValue:
-            !Sub ${InfrastructureNotificationsStackName}-OpsWarnMessagesSnsTopicArn
+        - Fn::ImportValue: !Sub ${InfrastructureNotificationsStackName}-OpsWarnMessagesSnsTopicArn
       OKActions:
-        - Fn::ImportValue:
-            !Sub ${InfrastructureNotificationsStackName}-OpsWarnMessagesSnsTopicArn
+        - Fn::ImportValue: !Sub ${InfrastructureNotificationsStackName}-OpsWarnMessagesSnsTopicArn
       AlarmDescription: >-
         The error rate on the CodeBuild callback handler lambda has exceeded 0
         in the last five minutes.
@@ -671,8 +656,7 @@ Resources:
                 Action:
                   - sns:Publish
                 Resource:
-                  - Fn::ImportValue:
-                      !Sub ${InfrastructureNotificationsStackName}-SlackMessageRelaySnsTopicArn
+                  - Fn::ImportValue: !Sub ${InfrastructureNotificationsStackName}-SlackMessageRelaySnsTopicArn
       ManagedPolicyArns:
         - arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole
       Tags:
@@ -691,8 +675,7 @@ Resources:
       Environment:
         Variables:
           SLACK_MESSAGE_RELAY_TOPIC_ARN:
-            Fn::ImportValue:
-                !Sub ${InfrastructureNotificationsStackName}-SlackMessageRelaySnsTopicArn
+            Fn::ImportValue: !Sub ${InfrastructureNotificationsStackName}-SlackMessageRelaySnsTopicArn
       Events:
         SnsMessages:
           Properties:
@@ -718,14 +701,11 @@ Resources:
       ActionsEnabled: true
       AlarmName: "[Infra][CI][Lambda][Errors] CI Status Handler"
       AlarmActions:
-        - Fn::ImportValue:
-            !Sub ${InfrastructureNotificationsStackName}-OpsWarnMessagesSnsTopicArn
+        - Fn::ImportValue: !Sub ${InfrastructureNotificationsStackName}-OpsWarnMessagesSnsTopicArn
       InsufficientDataActions:
-        - Fn::ImportValue:
-            !Sub ${InfrastructureNotificationsStackName}-OpsWarnMessagesSnsTopicArn
+        - Fn::ImportValue: !Sub ${InfrastructureNotificationsStackName}-OpsWarnMessagesSnsTopicArn
       OKActions:
-        - Fn::ImportValue:
-            !Sub ${InfrastructureNotificationsStackName}-OpsWarnMessagesSnsTopicArn
+        - Fn::ImportValue: !Sub ${InfrastructureNotificationsStackName}-OpsWarnMessagesSnsTopicArn
       AlarmDescription: >-
         The error rate on the CI status notifications handler lambda has
         exceeded 0 in the last minute.
