--- a/db/castle-postgres-instance.yml
+++ b/db/castle-postgres-instance.yml
@@ -166,10 +166,8 @@ Resources:
       DBSubnetGroupDescription: !Sub Castle ${EnvironmentType} Postgtres11 Subnet Group
       DBSubnetGroupName: !Sub Castle-${EnvironmentType}-Postgres11
       SubnetIds:
-        - Fn::ImportValue:
-            !Sub ${VPCStackName}-Subnet1
-        - Fn::ImportValue:
-            !Sub ${VPCStackName}-Subnet2
+        - Fn::ImportValue: !Sub ${VPCStackName}-Subnet1
+        - Fn::ImportValue: !Sub ${VPCStackName}-Subnet2
       Tags:
         - Key: Project
           Value: castle.prx.org
@@ -206,8 +204,7 @@ Resources:
         - Key: "prx:cloudformation:stack-id"
           Value: !Ref AWS::StackId
       VpcId:
-        Fn::ImportValue:
-          !Sub ${VPCStackName}-VPC
+        Fn::ImportValue: !Sub ${VPCStackName}-VPC
   DiskSpaceAlarm:
     Type: "AWS::CloudWatch::Alarm"
     Condition: CreateAlarms
