--- a/db/elasticache-memcached.yml
+++ b/db/elasticache-memcached.yml
@@ -66,16 +66,13 @@ Resources:
       CacheSubnetGroupName: !Sub Platform-${EnvironmentType}-${AWS::StackName}-cache
       Description: !Ref EnvironmentType
       SubnetIds:
-        - Fn::ImportValue:
-            !Sub ${VPCStack}-Subnet1
-        - Fn::ImportValue:
-            !Sub ${VPCStack}-Subnet2
+        - Fn::ImportValue: !Sub ${VPCStack}-Subnet1
+        - Fn::ImportValue: !Sub ${VPCStack}-Subnet2
   ElasticacheSecurityGroup:
     Type: "AWS::EC2::SecurityGroup"
     Properties:
       VpcId:
-        Fn::ImportValue:
-          !Sub ${VPCStack}-VPC
+        Fn::ImportValue: !Sub ${VPCStack}-VPC
       GroupDescription: "Elasticache Security Group"
       SecurityGroupIngress:
         - CidrIp: 0.0.0.0/0
@@ -103,9 +100,9 @@ Resources:
           Value: !Ref ProjectTag
         - Key: Environment
           Value: !Ref EnvironmentType
-        - Key: 'prx:cloudformation:stack-name'
+        - Key: "prx:cloudformation:stack-name"
           Value: !Ref AWS::StackName
-        - Key: 'prx:cloudformation:stack-id'
+        - Key: "prx:cloudformation:stack-id"
           Value: !Ref AWS::StackId
 Outputs:
   EC2Platform:
