--- a/db/mysql-instance.yml
+++ b/db/mysql-instance.yml
@@ -196,10 +196,8 @@ Resources:
       DBSubnetGroupDescription: !Sub ${UniqueName} ${EnvironmentType} Subnet Group
       DBSubnetGroupName: !Sub ${UniqueName}-${EnvironmentType}-Mysql
       SubnetIds:
-        - Fn::ImportValue:
-            !Sub ${VPCStackName}-Subnet1
-        - Fn::ImportValue:
-            !Sub ${VPCStackName}-Subnet2
+        - Fn::ImportValue: !Sub ${VPCStackName}-Subnet1
+        - Fn::ImportValue: !Sub ${VPCStackName}-Subnet2
       Tags:
         - Key: Project
           Value: !Ref ProjectName
