--- a/db/solr-ec2.yml
+++ b/db/solr-ec2.yml
@@ -47,8 +47,7 @@ Resources:
       SecurityGroupIds:
         - !GetAtt SecurityGroup.GroupId
       SubnetId:
-        Fn::ImportValue:
-          !Sub ${VPCStackName}-Subnet1
+        Fn::ImportValue: !Sub ${VPCStackName}-Subnet1
       Tags:
         - Key: Project
           Value: Solr
