--- a/etc/dovetail-edge-deploy.yml
+++ b/etc/dovetail-edge-deploy.yml
@@ -826,8 +826,7 @@ Resources:
                 Action:
                   - sns:Publish
                 Resource:
-                  - Fn::ImportValue:
-                      !Sub ${InfrastructureNotificationsStackName}-SlackMessageRelaySnsTopicArn
+                  - Fn::ImportValue: !Sub ${InfrastructureNotificationsStackName}-SlackMessageRelaySnsTopicArn
         - PolicyName: CloudFormationReadPolicy
           PolicyDocument:
             Version: "2012-10-17"
@@ -1051,8 +1050,7 @@ Resources:
                   print(e)
                   traceback.print_exc()
                   put_job_failure(job, 'Function exception: ' + str(e))
-      Description:
-        Creates a CodePipeline artifact containing versioned ARNs for the
+      Description: Creates a CodePipeline artifact containing versioned ARNs for the
         Dovetail edge Lambda functions
       Handler: index.lambda_handler
       Environment:
@@ -1192,8 +1190,7 @@ Resources:
       Environment:
         Variables:
           SLACK_MESSAGE_RELAY_TOPIC_ARN:
-            Fn::ImportValue:
-              !Sub ${InfrastructureNotificationsStackName}-SlackMessageRelaySnsTopicArn
+            Fn::ImportValue: !Sub ${InfrastructureNotificationsStackName}-SlackMessageRelaySnsTopicArn
           CD_STACK_NAME: !Ref AWS::StackName
       Handler: index.lambda_handler
       MemorySize: 128
