--- a/etc/resource-reporter.yml
+++ b/etc/resource-reporter.yml
@@ -19,12 +19,12 @@ Resources:
       AssumeRolePolicyDocument:
         Version: "2012-10-17"
         Statement:
-            - Effect: "Allow"
-              Principal:
-                Service:
-                  - "lambda.amazonaws.com"
-              Action:
-                - "sts:AssumeRole"
+          - Effect: "Allow"
+            Principal:
+              Service:
+                - "lambda.amazonaws.com"
+            Action:
+              - "sts:AssumeRole"
       Path: "/"
       Policies:
         - PolicyName: SnsPolicy
@@ -101,10 +101,9 @@ Resources:
           SLACK_MESSAGE_RELAY_SNS_TOPIC_ARN: !Ref SlackMessageRelayTopicArn
           RESOURCE_SNS_TOPIC_ARN: !Ref ResourceSnsTopicArn
           SLACK_CHANNEL: !Ref SlackChannel
-          DESCRIPTIVE_ATTRIBUTE_KEYS:
-            !Join
-              - ","
-              - !Ref DescriptiveAttributeKeys
+          DESCRIPTIVE_ATTRIBUTE_KEYS: !Join
+            - ","
+            - !Ref DescriptiveAttributeKeys
       Handler: index.handler
       MemorySize: 128
       Role: !GetAtt LambdaIamRole.Arn
@@ -114,9 +113,8 @@ Resources:
     Type: "AWS::CloudWatch::Alarm"
     Properties:
       ActionsEnabled: true
-      AlarmName: !Join ["", [ "[", !Ref AlarmUniqueName, "][ResourceReporter][Lambda][Error] Invocation Error"]]
-      AlarmDescription:
-        The error rate on the CMS Resource reporter has exceeded 0.
+      AlarmName: !Join ["", ["[", !Ref AlarmUniqueName, "][ResourceReporter][Lambda][Error] Invocation Error"]]
+      AlarmDescription: The error rate on the CMS Resource reporter has exceeded 0.
       ComparisonOperator: GreaterThanThreshold
       EvaluationPeriods: 1
       MetricName: Errors
