--- a/secrets/secrets.yml
+++ b/secrets/secrets.yml
@@ -170,16 +170,14 @@ Resources:
     Properties:
       Code:
         S3Bucket:
-          Fn::ImportValue:
-            !Sub ${InfrastructureStorageStackName}-InfrastructureSupportBucket
+          Fn::ImportValue: !Sub ${InfrastructureStorageStackName}-InfrastructureSupportBucket
         S3Key: secrets/secrets-s3-update.zip
       Description: >
         Updates template config when secrets change
       Environment:
         Variables:
           INFRASTRUCTURE_CONFIG_BUCKET:
-            Fn::ImportValue:
-              !Sub ${InfrastructureStorageStackName}-InfrastructureConfigBucket
+            Fn::ImportValue: !Sub ${InfrastructureStorageStackName}-InfrastructureConfigBucket
           INFRASTRUCTURE_CONFIG_PRODUCTION_KEY: !Ref InfrastructureConfigProductionKey
           INFRASTRUCTURE_CONFIG_STAGING_KEY: !Ref InfrastructureConfigStagingKey
       Handler: lambda_function.lambda_handler
@@ -196,14 +194,11 @@ Resources:
       ActionsEnabled: true
       AlarmName: "[Infra][Secr][Lambda][Errors] S3 Config Update"
       AlarmActions:
-        - Fn::ImportValue:
-            !Sub "${NotificationsStackName}-OpsWarnMessagesSnsTopicArn"
+        - Fn::ImportValue: !Sub "${NotificationsStackName}-OpsWarnMessagesSnsTopicArn"
       InsufficientDataActions:
-        - Fn::ImportValue:
-            !Sub "${NotificationsStackName}-OpsWarnMessagesSnsTopicArn"
+        - Fn::ImportValue: !Sub "${NotificationsStackName}-OpsWarnMessagesSnsTopicArn"
       OKActions:
-        - Fn::ImportValue:
-            !Sub "${NotificationsStackName}-OpsWarnMessagesSnsTopicArn"
+        - Fn::ImportValue: !Sub "${NotificationsStackName}-OpsWarnMessagesSnsTopicArn"
       AlarmDescription: >
         The error rate on the secrets S3 update lambda has exceeded 0 in
         the last minute.
