--- a/stacks/container-apps/augury-forecast.yml
+++ b/stacks/container-apps/augury-forecast.yml
@@ -44,7 +44,7 @@ Resources:
     Type: AWS::IAM::Role
     Properties:
       AssumeRolePolicyDocument:
-        Version: '2012-10-17'
+        Version: "2012-10-17"
         Statement:
           - Action:
               - sts:AssumeRole
@@ -67,7 +67,7 @@ Resources:
     Type: AWS::IAM::Role
     Properties:
       AssumeRolePolicyDocument:
-        Version: '2012-10-17'
+        Version: "2012-10-17"
         Statement:
           - Action:
               - sts:AssumeRole
@@ -111,9 +111,9 @@ Resources:
               awslogs-region: !Ref AWS::Region
               awslogs-stream-prefix: augury-forecast
           Name: augury-forecast
-      Cpu: '4096'
+      Cpu: "4096"
       ExecutionRoleArn: !GetAtt AuguryForecastExecutionRole.Arn
-      Memory: '16384'
+      Memory: "16384"
       NetworkMode: awsvpc
       RequiresCompatibilities:
         - FARGATE
@@ -135,7 +135,7 @@ Resources:
     Properties:
       PolicyDocument:
         Id: AuguryForecastRelayPolicy
-        Version: '2012-10-17'
+        Version: "2012-10-17"
         Statement:
           - Sid: ECSInstancePublish
             Effect: Allow
