--- a/stacks/container-apps/exchange-alarms.yml
+++ b/stacks/container-apps/exchange-alarms.yml
@@ -61,11 +61,11 @@ Resources:
         Cooldown: 60
         MetricAggregationType: Average
         StepAdjustments:
-        - MetricIntervalLowerBound: -9
-          MetricIntervalUpperBound: 0
-          ScalingAdjustment: -1
-        - MetricIntervalUpperBound: -9
-          ScalingAdjustment: -2
+          - MetricIntervalLowerBound: -9
+            MetricIntervalUpperBound: 0
+            ScalingAdjustment: -1
+          - MetricIntervalUpperBound: -9
+            ScalingAdjustment: -2
   ExchangeWorkerAutoScalingScaleInAlarm:
     Type: "AWS::CloudWatch::Alarm"
     Properties:
@@ -95,14 +95,14 @@ Resources:
         Cooldown: 120
         MetricAggregationType: Average
         StepAdjustments:
-        - MetricIntervalLowerBound: 0
-          MetricIntervalUpperBound: 80
-          ScalingAdjustment: 2
-        - MetricIntervalLowerBound: 80
-          MetricIntervalUpperBound: 380
-          ScalingAdjustment: 4
-        - MetricIntervalLowerBound: 380
-          ScalingAdjustment: 6
+          - MetricIntervalLowerBound: 0
+            MetricIntervalUpperBound: 80
+            ScalingAdjustment: 2
+          - MetricIntervalLowerBound: 80
+            MetricIntervalUpperBound: 380
+            ScalingAdjustment: 4
+          - MetricIntervalLowerBound: 380
+            ScalingAdjustment: 6
   ExchangeWorkerAutoScalingScaleOutAlarm:
     Type: "AWS::CloudWatch::Alarm"
     Properties:
@@ -133,8 +133,7 @@ Resources:
         - !If [CreateProductionResources, !Ref OpsFatalMessagesSnsTopicArn, !Ref OpsWarnMessagesSnsTopicArn]
       OKActions:
         - !If [CreateProductionResources, !Ref OpsFatalMessagesSnsTopicArn, !Ref OpsWarnMessagesSnsTopicArn]
-      AlarmDescription:
-        Deliveries are very behind
+      AlarmDescription: Deliveries are very behind
       ComparisonOperator: GreaterThanThreshold
       EvaluationPeriods: 12
       MetricName: ApproximateNumberOfMessagesVisible
@@ -157,8 +156,7 @@ Resources:
         - !If [CreateProductionResources, !Ref OpsFatalMessagesSnsTopicArn, !Ref OpsWarnMessagesSnsTopicArn]
       OKActions:
         - !If [CreateProductionResources, !Ref OpsFatalMessagesSnsTopicArn, !Ref OpsWarnMessagesSnsTopicArn]
-      AlarmDescription:
-        SayWhen is very behind
+      AlarmDescription: SayWhen is very behind
       ComparisonOperator: GreaterThanThreshold
       EvaluationPeriods: 12
       MetricName: ApproximateNumberOfMessagesVisible
