--- a/stacks/container-apps/root.yml
+++ b/stacks/container-apps/root.yml
@@ -133,8 +133,7 @@ Resources:
     Type: "AWS::CloudFormation::Stack"
     Properties:
       NotificationARNs:
-        - Fn::ImportValue:
-            !Sub "${InfrastructureNotificationsStackName}-CloudFormationNotificationSnsTopic"
+        - Fn::ImportValue: !Sub "${InfrastructureNotificationsStackName}-CloudFormationNotificationSnsTopic"
       Parameters:
         VPC: !Ref VPC
         PlatformALBDNSName: !Ref PlatformALBDNSName
@@ -146,11 +145,9 @@ Resources:
         ECSServiceAutoscaleIAMRoleArn: !Ref ECSServiceAutoscaleIAMRoleArn
         ECSServiceIAMRole: !Ref ECSServiceIAMRole
         OpsDebugMessagesSnsTopicArn:
-          Fn::ImportValue:
-            !Sub "${InfrastructureNotificationsStackName}-OpsDebugMessagesSnsTopicArn"
+          Fn::ImportValue: !Sub "${InfrastructureNotificationsStackName}-OpsDebugMessagesSnsTopicArn"
         OpsErrorMessagesSnsTopicArn:
-          Fn::ImportValue:
-            !Sub "${InfrastructureNotificationsStackName}-OpsErrorMessagesSnsTopicArn"
+          Fn::ImportValue: !Sub "${InfrastructureNotificationsStackName}-OpsErrorMessagesSnsTopicArn"
         EnvironmentType: !Ref EnvironmentType
         EnvironmentTypeAbbreviation: !Ref EnvironmentTypeAbbreviation
         EcrRegion: !Ref EcrRegion
@@ -180,8 +177,7 @@ Resources:
     Type: "AWS::CloudFormation::Stack"
     Properties:
       NotificationARNs:
-        - Fn::ImportValue:
-            !Sub "${InfrastructureNotificationsStackName}-CloudFormationNotificationSnsTopic"
+        - Fn::ImportValue: !Sub "${InfrastructureNotificationsStackName}-CloudFormationNotificationSnsTopic"
       Parameters:
         ECSCluster: !Ref ECSCluster
         EnvironmentType: !Ref EnvironmentType
@@ -205,18 +201,14 @@ Resources:
     Type: "AWS::CloudFormation::Stack"
     Properties:
       NotificationARNs:
-        - Fn::ImportValue:
-            !Sub "${InfrastructureNotificationsStackName}-CloudFormationNotificationSnsTopic"
+        - Fn::ImportValue: !Sub "${InfrastructureNotificationsStackName}-CloudFormationNotificationSnsTopic"
       Parameters:
         OpsWarnMessagesSnsTopicArn:
-          Fn::ImportValue:
-            !Sub "${InfrastructureNotificationsStackName}-OpsWarnMessagesSnsTopicArn"
+          Fn::ImportValue: !Sub "${InfrastructureNotificationsStackName}-OpsWarnMessagesSnsTopicArn"
         OpsErrorMessagesSnsTopicArn:
-          Fn::ImportValue:
-            !Sub "${InfrastructureNotificationsStackName}-OpsErrorMessagesSnsTopicArn"
+          Fn::ImportValue: !Sub "${InfrastructureNotificationsStackName}-OpsErrorMessagesSnsTopicArn"
         OpsFatalMessagesSnsTopicArn:
-          Fn::ImportValue:
-            !Sub "${InfrastructureNotificationsStackName}-OpsFatalMessagesSnsTopicArn"
+          Fn::ImportValue: !Sub "${InfrastructureNotificationsStackName}-OpsFatalMessagesSnsTopicArn"
         EnvironmentType: !Ref EnvironmentType
         ECSCluster: !Ref ECSCluster
         WorkerServiceName: !GetAtt ExchangeStack.Outputs.WorkerServiceName
@@ -231,8 +223,7 @@ Resources:
     Type: "AWS::CloudFormation::Stack"
     Properties:
       NotificationARNs:
-        - Fn::ImportValue:
-            !Sub "${InfrastructureNotificationsStackName}-CloudFormationNotificationSnsTopic"
+        - Fn::ImportValue: !Sub "${InfrastructureNotificationsStackName}-CloudFormationNotificationSnsTopic"
       Parameters:
         VPC: !Ref VPC
         PlatformALBDNSName: !Ref PlatformALBDNSName
@@ -244,11 +235,9 @@ Resources:
         ECSServiceAutoscaleIAMRoleArn: !Ref ECSServiceAutoscaleIAMRoleArn
         ECSServiceIAMRole: !Ref ECSServiceIAMRole
         OpsDebugMessagesSnsTopicArn:
-          Fn::ImportValue:
-            !Sub "${InfrastructureNotificationsStackName}-OpsDebugMessagesSnsTopicArn"
+          Fn::ImportValue: !Sub "${InfrastructureNotificationsStackName}-OpsDebugMessagesSnsTopicArn"
         OpsErrorMessagesSnsTopicArn:
-          Fn::ImportValue:
-            !Sub "${InfrastructureNotificationsStackName}-OpsErrorMessagesSnsTopicArn"
+          Fn::ImportValue: !Sub "${InfrastructureNotificationsStackName}-OpsErrorMessagesSnsTopicArn"
         EnvironmentType: !Ref EnvironmentType
         EnvironmentTypeAbbreviation: !Ref EnvironmentTypeAbbreviation
         EcrRegion: !Ref EcrRegion
@@ -276,26 +265,22 @@ Resources:
     Type: "AWS::CloudFormation::Stack"
     Properties:
       NotificationARNs:
-        - Fn::ImportValue:
-            !Sub "${InfrastructureNotificationsStackName}-CloudFormationNotificationSnsTopic"
+        - Fn::ImportValue: !Sub "${InfrastructureNotificationsStackName}-CloudFormationNotificationSnsTopic"
       Parameters:
         VPC: !Ref VPC
         VPCSubnet1: !Ref VPCSubnet1
         VPCSubnet2: !Ref VPCSubnet2
         VPCSubnet3: !Ref VPCSubnet3
-        VPCCertificateArn:  !Ref VPCCertificateArn
+        VPCCertificateArn: !Ref VPCCertificateArn
         ECSCluster: !Ref ECSCluster
         ECSServiceAutoscaleIAMRoleArn: !Ref ECSServiceAutoscaleIAMRoleArn
         ECSServiceIAMRole: !Ref ECSServiceIAMRole
         OpsDebugMessagesSnsTopicArn:
-          Fn::ImportValue:
-            !Sub "${InfrastructureNotificationsStackName}-OpsDebugMessagesSnsTopicArn"
+          Fn::ImportValue: !Sub "${InfrastructureNotificationsStackName}-OpsDebugMessagesSnsTopicArn"
         OpsWarnMessagesSnsTopicArn:
-          Fn::ImportValue:
-            !Sub "${InfrastructureNotificationsStackName}-OpsWarnMessagesSnsTopicArn"
+          Fn::ImportValue: !Sub "${InfrastructureNotificationsStackName}-OpsWarnMessagesSnsTopicArn"
         OpsErrorMessagesSnsTopicArn:
-          Fn::ImportValue:
-            !Sub "${InfrastructureNotificationsStackName}-OpsErrorMessagesSnsTopicArn"
+          Fn::ImportValue: !Sub "${InfrastructureNotificationsStackName}-OpsErrorMessagesSnsTopicArn"
         EnvironmentType: !Ref EnvironmentType
         EnvironmentTypeAbbreviation: !Ref EnvironmentTypeAbbreviation
         SecretsBase: !Ref SecretsBase
@@ -323,8 +308,7 @@ Resources:
     Type: "AWS::CloudFormation::Stack"
     Properties:
       NotificationARNs:
-        - Fn::ImportValue:
-            !Sub "${InfrastructureNotificationsStackName}-CloudFormationNotificationSnsTopic"
+        - Fn::ImportValue: !Sub "${InfrastructureNotificationsStackName}-CloudFormationNotificationSnsTopic"
       Parameters:
         VPC: !Ref VPC
         PlatformALBDNSName: !Ref PlatformALBDNSName
@@ -336,11 +320,9 @@ Resources:
         ECSServiceAutoscaleIAMRoleArn: !Ref ECSServiceAutoscaleIAMRoleArn
         ECSServiceIAMRole: !Ref ECSServiceIAMRole
         OpsDebugMessagesSnsTopicArn:
-          Fn::ImportValue:
-            !Sub "${InfrastructureNotificationsStackName}-OpsDebugMessagesSnsTopicArn"
+          Fn::ImportValue: !Sub "${InfrastructureNotificationsStackName}-OpsDebugMessagesSnsTopicArn"
         OpsErrorMessagesSnsTopicArn:
-          Fn::ImportValue:
-            !Sub "${InfrastructureNotificationsStackName}-OpsErrorMessagesSnsTopicArn"
+          Fn::ImportValue: !Sub "${InfrastructureNotificationsStackName}-OpsErrorMessagesSnsTopicArn"
         EnvironmentType: !Ref EnvironmentType
         EnvironmentTypeAbbreviation: !Ref EnvironmentTypeAbbreviation
         EcrRegion: !Ref EcrRegion
@@ -370,18 +352,14 @@ Resources:
     Type: "AWS::CloudFormation::Stack"
     Properties:
       NotificationARNs:
-        - Fn::ImportValue:
-            !Sub "${InfrastructureNotificationsStackName}-CloudFormationNotificationSnsTopic"
+        - Fn::ImportValue: !Sub "${InfrastructureNotificationsStackName}-CloudFormationNotificationSnsTopic"
       Parameters:
         OpsWarnMessagesSnsTopicArn:
-          Fn::ImportValue:
-            !Sub "${InfrastructureNotificationsStackName}-OpsWarnMessagesSnsTopicArn"
+          Fn::ImportValue: !Sub "${InfrastructureNotificationsStackName}-OpsWarnMessagesSnsTopicArn"
         OpsErrorMessagesSnsTopicArn:
-          Fn::ImportValue:
-            !Sub "${InfrastructureNotificationsStackName}-OpsErrorMessagesSnsTopicArn"
+          Fn::ImportValue: !Sub "${InfrastructureNotificationsStackName}-OpsErrorMessagesSnsTopicArn"
         OpsFatalMessagesSnsTopicArn:
-          Fn::ImportValue:
-            !Sub "${InfrastructureNotificationsStackName}-OpsFatalMessagesSnsTopicArn"
+          Fn::ImportValue: !Sub "${InfrastructureNotificationsStackName}-OpsFatalMessagesSnsTopicArn"
         EnvironmentType: !Ref EnvironmentType
         EnvironmentTypeAbbreviation: !Ref EnvironmentTypeAbbreviation
         AuguryWorkerLogGroupName: !GetAtt AuguryStack.Outputs.WorkerLogGroupName
@@ -396,8 +374,7 @@ Resources:
     Type: "AWS::CloudFormation::Stack"
     Properties:
       NotificationARNs:
-        - Fn::ImportValue:
-            !Sub "${InfrastructureNotificationsStackName}-CloudFormationNotificationSnsTopic"
+        - Fn::ImportValue: !Sub "${InfrastructureNotificationsStackName}-CloudFormationNotificationSnsTopic"
       Parameters:
         ECSCluster: !Ref ECSCluster
         ECSInstanceIAMRoleArn: !Ref ECSInstanceIAMRoleArn
@@ -413,8 +390,7 @@ Resources:
         VPCSubnet2: !Ref VPCSubnet2
         VPCSubnet3: !Ref VPCSubnet3
         OpsErrorMessagesSnsTopicArn:
-          Fn::ImportValue:
-            !Sub "${InfrastructureNotificationsStackName}-OpsErrorMessagesSnsTopicArn"
+          Fn::ImportValue: !Sub "${InfrastructureNotificationsStackName}-OpsErrorMessagesSnsTopicArn"
       Tags:
         - Key: "prx:cloudformation:stack-name"
           Value: !Ref AWS::StackName
@@ -427,8 +403,7 @@ Resources:
     Condition: IsStaging
     Properties:
       NotificationARNs:
-        - Fn::ImportValue:
-            !Sub "${InfrastructureNotificationsStackName}-CloudFormationNotificationSnsTopic"
+        - Fn::ImportValue: !Sub "${InfrastructureNotificationsStackName}-CloudFormationNotificationSnsTopic"
       Parameters:
         VPC: !Ref VPC
         PlatformALBDNSName: !Ref PlatformALBDNSName
@@ -440,11 +415,9 @@ Resources:
         ECSServiceAutoscaleIAMRoleArn: !Ref ECSServiceAutoscaleIAMRoleArn
         ECSServiceIAMRole: !Ref ECSServiceIAMRole
         OpsDebugMessagesSnsTopicArn:
-          Fn::ImportValue:
-            !Sub "${InfrastructureNotificationsStackName}-OpsDebugMessagesSnsTopicArn"
+          Fn::ImportValue: !Sub "${InfrastructureNotificationsStackName}-OpsDebugMessagesSnsTopicArn"
         OpsErrorMessagesSnsTopicArn:
-          Fn::ImportValue:
-            !Sub "${InfrastructureNotificationsStackName}-OpsErrorMessagesSnsTopicArn"
+          Fn::ImportValue: !Sub "${InfrastructureNotificationsStackName}-OpsErrorMessagesSnsTopicArn"
         EnvironmentType: !Ref EnvironmentType
         EnvironmentTypeAbbreviation: !Ref EnvironmentTypeAbbreviation
         EcrRegion: !Ref EcrRegion
@@ -470,8 +443,7 @@ Resources:
     Type: "AWS::CloudFormation::Stack"
     Properties:
       NotificationARNs:
-        - Fn::ImportValue:
-            !Sub "${InfrastructureNotificationsStackName}-CloudFormationNotificationSnsTopic"
+        - Fn::ImportValue: !Sub "${InfrastructureNotificationsStackName}-CloudFormationNotificationSnsTopic"
       Parameters:
         VPC: !Ref VPC
         PlatformALBDNSName: !Ref PlatformALBDNSName
@@ -483,11 +455,9 @@ Resources:
         ECSServiceAutoscaleIAMRoleArn: !Ref ECSServiceAutoscaleIAMRoleArn
         ECSServiceIAMRole: !Ref ECSServiceIAMRole
         OpsDebugMessagesSnsTopicArn:
-          Fn::ImportValue:
-            !Sub "${InfrastructureNotificationsStackName}-OpsDebugMessagesSnsTopicArn"
+          Fn::ImportValue: !Sub "${InfrastructureNotificationsStackName}-OpsDebugMessagesSnsTopicArn"
         OpsErrorMessagesSnsTopicArn:
-          Fn::ImportValue:
-            !Sub "${InfrastructureNotificationsStackName}-OpsErrorMessagesSnsTopicArn"
+          Fn::ImportValue: !Sub "${InfrastructureNotificationsStackName}-OpsErrorMessagesSnsTopicArn"
         EnvironmentType: !Ref EnvironmentType
         EnvironmentTypeAbbreviation: !Ref EnvironmentTypeAbbreviation
         EcrRegion: !Ref EcrRegion
@@ -513,18 +483,14 @@ Resources:
     Type: "AWS::CloudFormation::Stack"
     Properties:
       NotificationARNs:
-        - Fn::ImportValue:
-            !Sub "${InfrastructureNotificationsStackName}-CloudFormationNotificationSnsTopic"
+        - Fn::ImportValue: !Sub "${InfrastructureNotificationsStackName}-CloudFormationNotificationSnsTopic"
       Parameters:
         OpsWarnMessagesSnsTopicArn:
-          Fn::ImportValue:
-            !Sub "${InfrastructureNotificationsStackName}-OpsWarnMessagesSnsTopicArn"
+          Fn::ImportValue: !Sub "${InfrastructureNotificationsStackName}-OpsWarnMessagesSnsTopicArn"
         OpsErrorMessagesSnsTopicArn:
-          Fn::ImportValue:
-            !Sub "${InfrastructureNotificationsStackName}-OpsErrorMessagesSnsTopicArn"
+          Fn::ImportValue: !Sub "${InfrastructureNotificationsStackName}-OpsErrorMessagesSnsTopicArn"
         OpsFatalMessagesSnsTopicArn:
-          Fn::ImportValue:
-            !Sub "${InfrastructureNotificationsStackName}-OpsFatalMessagesSnsTopicArn"
+          Fn::ImportValue: !Sub "${InfrastructureNotificationsStackName}-OpsFatalMessagesSnsTopicArn"
         EnvironmentType: !Ref EnvironmentType
         EnvironmentTypeAbbreviation: !Ref EnvironmentTypeAbbreviation
         AudioSqsCallbackName: !Sub "/prx/${EnvironmentTypeAbbreviation}/cms-audio-lambda/SQS_CALLBACK_NAME"
@@ -541,8 +507,7 @@ Resources:
     Condition: IsStaging
     Properties:
       NotificationARNs:
-        - Fn::ImportValue:
-            !Sub "${InfrastructureNotificationsStackName}-CloudFormationNotificationSnsTopic"
+        - Fn::ImportValue: !Sub "${InfrastructureNotificationsStackName}-CloudFormationNotificationSnsTopic"
       Parameters:
         VPC: !Ref VPC
         PlatformALBDNSName: !Ref PlatformALBDNSName
@@ -554,11 +519,9 @@ Resources:
         ECSServiceAutoscaleIAMRoleArn: !Ref ECSServiceAutoscaleIAMRoleArn
         ECSServiceIAMRole: !Ref ECSServiceIAMRole
         OpsDebugMessagesSnsTopicArn:
-          Fn::ImportValue:
-            !Sub "${InfrastructureNotificationsStackName}-OpsDebugMessagesSnsTopicArn"
+          Fn::ImportValue: !Sub "${InfrastructureNotificationsStackName}-OpsDebugMessagesSnsTopicArn"
         OpsErrorMessagesSnsTopicArn:
-          Fn::ImportValue:
-            !Sub "${InfrastructureNotificationsStackName}-OpsErrorMessagesSnsTopicArn"
+          Fn::ImportValue: !Sub "${InfrastructureNotificationsStackName}-OpsErrorMessagesSnsTopicArn"
         EnvironmentType: !Ref EnvironmentType
         EnvironmentTypeAbbreviation: !Ref EnvironmentTypeAbbreviation
         EcrRegion: !Ref EcrRegion
@@ -585,8 +548,7 @@ Resources:
     Type: "AWS::CloudFormation::Stack"
     Properties:
       NotificationARNs:
-        - Fn::ImportValue:
-            !Sub "${InfrastructureNotificationsStackName}-CloudFormationNotificationSnsTopic"
+        - Fn::ImportValue: !Sub "${InfrastructureNotificationsStackName}-CloudFormationNotificationSnsTopic"
       Parameters:
         VPC: !Ref VPC
         PlatformALBDNSName: !Ref PlatformALBDNSName
@@ -598,11 +560,9 @@ Resources:
         ECSServiceAutoscaleIAMRoleArn: !Ref ECSServiceAutoscaleIAMRoleArn
         ECSServiceIAMRole: !Ref ECSServiceIAMRole
         OpsDebugMessagesSnsTopicArn:
-          Fn::ImportValue:
-            !Sub "${InfrastructureNotificationsStackName}-OpsDebugMessagesSnsTopicArn"
+          Fn::ImportValue: !Sub "${InfrastructureNotificationsStackName}-OpsDebugMessagesSnsTopicArn"
         OpsErrorMessagesSnsTopicArn:
-          Fn::ImportValue:
-            !Sub "${InfrastructureNotificationsStackName}-OpsErrorMessagesSnsTopicArn"
+          Fn::ImportValue: !Sub "${InfrastructureNotificationsStackName}-OpsErrorMessagesSnsTopicArn"
         EnvironmentType: !Ref EnvironmentType
         EnvironmentTypeAbbreviation: !Ref EnvironmentTypeAbbreviation
         EcrRegion: !Ref EcrRegion
@@ -631,8 +591,7 @@ Resources:
     Type: "AWS::CloudFormation::Stack"
     Properties:
       NotificationARNs:
-        - Fn::ImportValue:
-            !Sub "${InfrastructureNotificationsStackName}-CloudFormationNotificationSnsTopic"
+        - Fn::ImportValue: !Sub "${InfrastructureNotificationsStackName}-CloudFormationNotificationSnsTopic"
       Parameters:
         ECSClusterArn: !Ref ECSClusterArn
         ECSServiceIAMRoleArn: !Ref ECSServiceIAMRoleArn
@@ -651,8 +610,7 @@ Resources:
     Type: "AWS::CloudFormation::Stack"
     Properties:
       NotificationARNs:
-        - Fn::ImportValue:
-            !Sub "${InfrastructureNotificationsStackName}-CloudFormationNotificationSnsTopic"
+        - Fn::ImportValue: !Sub "${InfrastructureNotificationsStackName}-CloudFormationNotificationSnsTopic"
       Parameters:
         VPC: !Ref VPC
         PlatformALBDNSName: !Ref PlatformALBDNSName
@@ -664,11 +622,9 @@ Resources:
         ECSServiceAutoscaleIAMRoleArn: !Ref ECSServiceAutoscaleIAMRoleArn
         ECSServiceIAMRole: !Ref ECSServiceIAMRole
         OpsDebugMessagesSnsTopicArn:
-          Fn::ImportValue:
-            !Sub "${InfrastructureNotificationsStackName}-OpsDebugMessagesSnsTopicArn"
+          Fn::ImportValue: !Sub "${InfrastructureNotificationsStackName}-OpsDebugMessagesSnsTopicArn"
         OpsErrorMessagesSnsTopicArn:
-          Fn::ImportValue:
-            !Sub "${InfrastructureNotificationsStackName}-OpsErrorMessagesSnsTopicArn"
+          Fn::ImportValue: !Sub "${InfrastructureNotificationsStackName}-OpsErrorMessagesSnsTopicArn"
         EnvironmentType: !Ref EnvironmentType
         EnvironmentTypeAbbreviation: !Ref EnvironmentTypeAbbreviation
         EcrRegion: !Ref EcrRegion
@@ -694,8 +650,7 @@ Resources:
     Type: "AWS::CloudFormation::Stack"
     Properties:
       NotificationARNs:
-        - Fn::ImportValue:
-            !Sub "${InfrastructureNotificationsStackName}-CloudFormationNotificationSnsTopic"
+        - Fn::ImportValue: !Sub "${InfrastructureNotificationsStackName}-CloudFormationNotificationSnsTopic"
       Parameters:
         VPC: !Ref VPC
         PlatformALBDNSName: !Ref PlatformALBDNSName
@@ -707,11 +662,9 @@ Resources:
         ECSServiceAutoscaleIAMRoleArn: !Ref ECSServiceAutoscaleIAMRoleArn
         ECSServiceIAMRole: !Ref ECSServiceIAMRole
         OpsDebugMessagesSnsTopicArn:
-          Fn::ImportValue:
-            !Sub "${InfrastructureNotificationsStackName}-OpsDebugMessagesSnsTopicArn"
+          Fn::ImportValue: !Sub "${InfrastructureNotificationsStackName}-OpsDebugMessagesSnsTopicArn"
         OpsErrorMessagesSnsTopicArn:
-          Fn::ImportValue:
-            !Sub "${InfrastructureNotificationsStackName}-OpsErrorMessagesSnsTopicArn"
+          Fn::ImportValue: !Sub "${InfrastructureNotificationsStackName}-OpsErrorMessagesSnsTopicArn"
         EnvironmentType: !Ref EnvironmentType
         EnvironmentTypeAbbreviation: !Ref EnvironmentTypeAbbreviation
         EcrRegion: !Ref EcrRegion
