--- a/stacks/dovetail.prx.org.yml
+++ b/stacks/dovetail.prx.org.yml
@@ -670,12 +670,12 @@ Resources:
       AssumeRolePolicyDocument:
         Version: "2012-10-17"
         Statement:
-            - Effect: "Allow"
-              Principal:
-                Service:
-                  - !Sub "logs.${AWS::Region}.amazonaws.com"
-              Action:
-                - "sts:AssumeRole"
+          - Effect: "Allow"
+            Principal:
+              Service:
+                - !Sub "logs.${AWS::Region}.amazonaws.com"
+            Action:
+              - "sts:AssumeRole"
       Path: "/"
       Policies:
         - PolicyName: DovetailRouterSubscriptionKinesisPolicy
@@ -700,7 +700,7 @@ Resources:
     Type: "AWS::Logs::SubscriptionFilter"
     Properties:
       DestinationArn: !Ref DynamodbKinesisStream
-      FilterPattern: '{$.msg = impression}'
+      FilterPattern: "{$.msg = impression}"
       LogGroupName: !Ref DovetailRouterLogGroup
       RoleArn: !GetAtt DovetailRouterSubscriptionRole.Arn
   # Autoscaling
@@ -746,8 +746,8 @@ Resources:
         Cooldown: 300
         MetricAggregationType: Average
         StepAdjustments:
-        - MetricIntervalUpperBound: 0
-          ScalingAdjustment: -1
+          - MetricIntervalUpperBound: 0
+            ScalingAdjustment: -1
   DovetailAutoScalingScaleInAlarm:
     Type: "AWS::CloudWatch::Alarm"
     Properties:
@@ -781,11 +781,11 @@ Resources:
         Cooldown: 120
         MetricAggregationType: Average
         StepAdjustments:
-        - MetricIntervalLowerBound: 0
-          MetricIntervalUpperBound: 5
-          ScalingAdjustment: 1
-        - MetricIntervalLowerBound: 5
-          ScalingAdjustment: 2
+          - MetricIntervalLowerBound: 0
+            MetricIntervalUpperBound: 5
+            ScalingAdjustment: 1
+          - MetricIntervalLowerBound: 5
+            ScalingAdjustment: 2
   DovetailAutoScalingScaleOutAlarm:
     Type: "AWS::CloudWatch::Alarm"
     Properties:
