--- a/stacks/load-balancers.yml
+++ b/stacks/load-balancers.yml
@@ -136,17 +136,17 @@ Resources:
     Properties:
       Actions:
         - RedirectConfig:
-            Host: '#{host}'
-            Path: '/#{path}'
-            Port: '443'
+            Host: "#{host}"
+            Path: "/#{path}"
+            Port: "443"
             Protocol: HTTPS
-            Query: '#{query}'
+            Query: "#{query}"
             StatusCode: HTTP_301
           Type: redirect
       Conditions:
         - Field: path-pattern
           Values:
-            - '*'
+            - "*"
       ListenerArn: !Ref PlatformALBHTTPListener
       Priority: 1
   PlatformALBHTTPSListener:
