--- a/stacks/serverless/analytics-ingest-alarms.yml
+++ b/stacks/serverless/analytics-ingest-alarms.yml
@@ -40,8 +40,7 @@ Resources:
         - !If [CreateProductionResources, !Ref OpsErrorMessagesSnsTopicArn, !Ref OpsWarnMessagesSnsTopicArn]
       OKActions:
         - !If [CreateProductionResources, !Ref OpsErrorMessagesSnsTopicArn, !Ref OpsWarnMessagesSnsTopicArn]
-      AlarmDescription:
-        Too many analytics bigquery lambda errors
+      AlarmDescription: Too many analytics bigquery lambda errors
       ComparisonOperator: GreaterThanThreshold
       EvaluationPeriods: 2
       MetricName: Errors
@@ -64,8 +63,7 @@ Resources:
         - !Ref OpsWarnMessagesSnsTopicArn
       OKActions:
         - !Ref OpsWarnMessagesSnsTopicArn
-      AlarmDescription:
-        Processing is slightly behind
+      AlarmDescription: Processing is slightly behind
       ComparisonOperator: GreaterThanThreshold
       EvaluationPeriods: 1
       MetricName: IteratorAge
@@ -88,8 +86,7 @@ Resources:
         - !If [CreateProductionResources, !Ref OpsFatalMessagesSnsTopicArn, !Ref OpsWarnMessagesSnsTopicArn]
       OKActions:
         - !If [CreateProductionResources, !Ref OpsFatalMessagesSnsTopicArn, !Ref OpsWarnMessagesSnsTopicArn]
-      AlarmDescription:
-        Processing is very behind
+      AlarmDescription: Processing is very behind
       ComparisonOperator: GreaterThanThreshold
       EvaluationPeriods: 1
       MetricName: IteratorAge
@@ -112,8 +109,7 @@ Resources:
         - !If [CreateProductionResources, !Ref OpsErrorMessagesSnsTopicArn, !Ref OpsWarnMessagesSnsTopicArn]
       OKActions:
         - !If [CreateProductionResources, !Ref OpsErrorMessagesSnsTopicArn, !Ref OpsWarnMessagesSnsTopicArn]
-      AlarmDescription:
-        Too many analytics dynamodb lambda errors
+      AlarmDescription: Too many analytics dynamodb lambda errors
       ComparisonOperator: GreaterThanThreshold
       EvaluationPeriods: 3
       MetricName: Errors
@@ -136,8 +132,7 @@ Resources:
         - !Ref OpsWarnMessagesSnsTopicArn
       OKActions:
         - !Ref OpsWarnMessagesSnsTopicArn
-      AlarmDescription:
-        Processing is slightly behind
+      AlarmDescription: Processing is slightly behind
       ComparisonOperator: GreaterThanThreshold
       EvaluationPeriods: 1
       MetricName: IteratorAge
@@ -160,8 +155,7 @@ Resources:
         - !If [CreateProductionResources, !Ref OpsFatalMessagesSnsTopicArn, !Ref OpsWarnMessagesSnsTopicArn]
       OKActions:
         - !If [CreateProductionResources, !Ref OpsFatalMessagesSnsTopicArn, !Ref OpsWarnMessagesSnsTopicArn]
-      AlarmDescription:
-        Processing is very behind
+      AlarmDescription: Processing is very behind
       ComparisonOperator: GreaterThanThreshold
       EvaluationPeriods: 1
       MetricName: IteratorAge
@@ -184,8 +178,7 @@ Resources:
         - !If [CreateProductionResources, !Ref OpsErrorMessagesSnsTopicArn, !Ref OpsWarnMessagesSnsTopicArn]
       OKActions:
         - !If [CreateProductionResources, !Ref OpsErrorMessagesSnsTopicArn, !Ref OpsWarnMessagesSnsTopicArn]
-      AlarmDescription:
-        Too many analytics pingbacks lambda errors
+      AlarmDescription: Too many analytics pingbacks lambda errors
       ComparisonOperator: GreaterThanThreshold
       EvaluationPeriods: 1
       MetricName: Errors
@@ -208,8 +201,7 @@ Resources:
         - !Ref OpsWarnMessagesSnsTopicArn
       OKActions:
         - !Ref OpsWarnMessagesSnsTopicArn
-      AlarmDescription:
-        Processing is slightly behind
+      AlarmDescription: Processing is slightly behind
       ComparisonOperator: GreaterThanThreshold
       EvaluationPeriods: 1
       MetricName: IteratorAge
@@ -232,8 +224,7 @@ Resources:
         - !If [CreateProductionResources, !Ref OpsFatalMessagesSnsTopicArn, !Ref OpsWarnMessagesSnsTopicArn]
       OKActions:
         - !If [CreateProductionResources, !Ref OpsFatalMessagesSnsTopicArn, !Ref OpsWarnMessagesSnsTopicArn]
-      AlarmDescription:
-        Processing is very behind
+      AlarmDescription: Processing is very behind
       ComparisonOperator: GreaterThanThreshold
       EvaluationPeriods: 1
       MetricName: IteratorAge
@@ -256,8 +247,7 @@ Resources:
         - !If [CreateProductionResources, !Ref OpsErrorMessagesSnsTopicArn, !Ref OpsWarnMessagesSnsTopicArn]
       OKActions:
         - !If [CreateProductionResources, !Ref OpsErrorMessagesSnsTopicArn, !Ref OpsWarnMessagesSnsTopicArn]
-      AlarmDescription:
-        Too many analytics redis lambda errors
+      AlarmDescription: Too many analytics redis lambda errors
       ComparisonOperator: GreaterThanThreshold
       EvaluationPeriods: 2
       MetricName: Errors
@@ -280,8 +270,7 @@ Resources:
         - !Ref OpsWarnMessagesSnsTopicArn
       OKActions:
         - !Ref OpsWarnMessagesSnsTopicArn
-      AlarmDescription:
-        Processing is slightly behind
+      AlarmDescription: Processing is slightly behind
       ComparisonOperator: GreaterThanThreshold
       EvaluationPeriods: 1
       MetricName: IteratorAge
@@ -304,8 +293,7 @@ Resources:
         - !If [CreateProductionResources, !Ref OpsFatalMessagesSnsTopicArn, !Ref OpsWarnMessagesSnsTopicArn]
       OKActions:
         - !If [CreateProductionResources, !Ref OpsFatalMessagesSnsTopicArn, !Ref OpsWarnMessagesSnsTopicArn]
-      AlarmDescription:
-        Processing is very behind
+      AlarmDescription: Processing is very behind
       ComparisonOperator: GreaterThanThreshold
       EvaluationPeriods: 1
       MetricName: IteratorAge
