--- a/stacks/serverless/root.yml
+++ b/stacks/serverless/root.yml
@@ -49,24 +49,19 @@ Resources:
     Type: "AWS::CloudFormation::Stack"
     Properties:
       NotificationARNs:
-        - Fn::ImportValue:
-            !Sub "${InfrastructureNotificationsStackName}-CloudFormationNotificationSnsTopic"
+        - Fn::ImportValue: !Sub "${InfrastructureNotificationsStackName}-CloudFormationNotificationSnsTopic"
       Parameters:
         OpsErrorMessagesSnsTopicArn:
-          Fn::ImportValue:
-            !Sub "${InfrastructureNotificationsStackName}-OpsErrorMessagesSnsTopicArn"
+          Fn::ImportValue: !Sub "${InfrastructureNotificationsStackName}-OpsErrorMessagesSnsTopicArn"
         OpsWarnMessagesSnsTopicArn:
-          Fn::ImportValue:
-            !Sub "${InfrastructureNotificationsStackName}-OpsWarnMessagesSnsTopicArn"
+          Fn::ImportValue: !Sub "${InfrastructureNotificationsStackName}-OpsWarnMessagesSnsTopicArn"
         OpsFatalMessagesSnsTopicArn:
-          Fn::ImportValue:
-            !Sub "${InfrastructureNotificationsStackName}-OpsFatalMessagesSnsTopicArn"
+          Fn::ImportValue: !Sub "${InfrastructureNotificationsStackName}-OpsFatalMessagesSnsTopicArn"
         PRXUploadAccessKey: !Ref PRXUploadAccessKey
         EnvironmentType: !Ref EnvironmentType
         WildcardCertificateArn: !Ref WildcardCertificateArn
         CodeS3Bucket:
-          Fn::ImportValue:
-            !Sub "${InfrastructureStorageStackName}-InfrastructureApplicationCodeBucket"
+          Fn::ImportValue: !Sub "${InfrastructureStorageStackName}-InfrastructureApplicationCodeBucket"
         CodeS3ObjectVersion: !Ref UploadLambdaCodeS3ObjectVersion
       Tags:
         - Key: "prx:cloudformation:stack-name"
@@ -79,19 +74,15 @@ Resources:
     Type: "AWS::CloudFormation::Stack"
     Properties:
       NotificationARNs:
-        - Fn::ImportValue:
-            !Sub "${InfrastructureNotificationsStackName}-CloudFormationNotificationSnsTopic"
+        - Fn::ImportValue: !Sub "${InfrastructureNotificationsStackName}-CloudFormationNotificationSnsTopic"
       Parameters:
         OpsErrorMessagesSnsTopicArn:
-          Fn::ImportValue:
-            !Sub "${InfrastructureNotificationsStackName}-OpsErrorMessagesSnsTopicArn"
+          Fn::ImportValue: !Sub "${InfrastructureNotificationsStackName}-OpsErrorMessagesSnsTopicArn"
         OpsWarnMessagesSnsTopicArn:
-          Fn::ImportValue:
-            !Sub "${InfrastructureNotificationsStackName}-OpsWarnMessagesSnsTopicArn"
+          Fn::ImportValue: !Sub "${InfrastructureNotificationsStackName}-OpsWarnMessagesSnsTopicArn"
         EnvironmentType: !Ref EnvironmentType
         CodeS3Bucket:
-          Fn::ImportValue:
-            !Sub "${InfrastructureStorageStackName}-InfrastructureApplicationCodeBucket"
+          Fn::ImportValue: !Sub "${InfrastructureStorageStackName}-InfrastructureApplicationCodeBucket"
         CodeS3ObjectVersion: !Ref RadiotopiaTowerLambdaCodeS3ObjectVersion
       Tags:
         - Key: "prx:cloudformation:stack-name"
@@ -104,12 +95,10 @@ Resources:
     Type: "AWS::CloudFormation::Stack"
     Properties:
       NotificationARNs:
-        - Fn::ImportValue:
-            !Sub "${InfrastructureNotificationsStackName}-CloudFormationNotificationSnsTopic"
+        - Fn::ImportValue: !Sub "${InfrastructureNotificationsStackName}-CloudFormationNotificationSnsTopic"
       Parameters:
         CodeS3Bucket:
-          Fn::ImportValue:
-            !Sub "${InfrastructureStorageStackName}-InfrastructureApplicationCodeBucket"
+          Fn::ImportValue: !Sub "${InfrastructureStorageStackName}-InfrastructureApplicationCodeBucket"
         CodeS3ObjectVersion: !Ref DovetailBytesLambdaCodeS3ObjectVersion
         EnvironmentType: !Ref EnvironmentType
       Tags:
@@ -123,21 +112,16 @@ Resources:
     Type: "AWS::CloudFormation::Stack"
     Properties:
       NotificationARNs:
-        - Fn::ImportValue:
-            !Sub "${InfrastructureNotificationsStackName}-CloudFormationNotificationSnsTopic"
+        - Fn::ImportValue: !Sub "${InfrastructureNotificationsStackName}-CloudFormationNotificationSnsTopic"
       Parameters:
         OpsWarnMessagesSnsTopicArn:
-          Fn::ImportValue:
-            !Sub "${InfrastructureNotificationsStackName}-OpsWarnMessagesSnsTopicArn"
+          Fn::ImportValue: !Sub "${InfrastructureNotificationsStackName}-OpsWarnMessagesSnsTopicArn"
         OpsErrorMessagesSnsTopicArn:
-          Fn::ImportValue:
-            !Sub "${InfrastructureNotificationsStackName}-OpsErrorMessagesSnsTopicArn"
+          Fn::ImportValue: !Sub "${InfrastructureNotificationsStackName}-OpsErrorMessagesSnsTopicArn"
         OpsFatalMessagesSnsTopicArn:
-          Fn::ImportValue:
-            !Sub "${InfrastructureNotificationsStackName}-OpsFatalMessagesSnsTopicArn"
+          Fn::ImportValue: !Sub "${InfrastructureNotificationsStackName}-OpsFatalMessagesSnsTopicArn"
         CodeS3Bucket:
-          Fn::ImportValue:
-            !Sub "${InfrastructureStorageStackName}-InfrastructureApplicationCodeBucket"
+          Fn::ImportValue: !Sub "${InfrastructureStorageStackName}-InfrastructureApplicationCodeBucket"
         CodeS3ObjectVersion: !Ref DovetailCountsLambdaCodeS3ObjectVersion
         EnvironmentType: !Ref EnvironmentType
         EnvironmentTypeAbbreviation: !Ref EnvironmentTypeAbbreviation
@@ -164,15 +148,12 @@ Resources:
     Condition: IsStaging
     Properties:
       NotificationARNs:
-        - Fn::ImportValue:
-            !Sub "${InfrastructureNotificationsStackName}-CloudFormationNotificationSnsTopic"
+        - Fn::ImportValue: !Sub "${InfrastructureNotificationsStackName}-CloudFormationNotificationSnsTopic"
       Parameters:
         OpsWarnMessagesSnsTopicArn:
-          Fn::ImportValue:
-            !Sub "${InfrastructureNotificationsStackName}-OpsWarnMessagesSnsTopicArn"
+          Fn::ImportValue: !Sub "${InfrastructureNotificationsStackName}-OpsWarnMessagesSnsTopicArn"
         CodeS3Bucket:
-          Fn::ImportValue:
-            !Sub "${InfrastructureStorageStackName}-InfrastructureApplicationCodeBucket"
+          Fn::ImportValue: !Sub "${InfrastructureStorageStackName}-InfrastructureApplicationCodeBucket"
         CodeS3ObjectVersion: !Ref DovetailTrafficLambdaCodeS3ObjectVersion
         DownloaderBatchSize: !Sub "/prx/${EnvironmentTypeAbbreviation}/dovetail-traffic-lambda/DOWNLOADER_BATCH_SIZE"
         ScheduleIntervalMinutes: !Sub "/prx/${EnvironmentTypeAbbreviation}/dovetail-traffic-lambda/SCHEDULE_INTERVAL_MINUTES"
@@ -209,12 +190,10 @@ Resources:
     Type: "AWS::CloudFormation::Stack"
     Properties:
       NotificationARNs:
-        - Fn::ImportValue:
-            !Sub "${InfrastructureNotificationsStackName}-CloudFormationNotificationSnsTopic"
+        - Fn::ImportValue: !Sub "${InfrastructureNotificationsStackName}-CloudFormationNotificationSnsTopic"
       Parameters:
         CodeS3Bucket:
-          Fn::ImportValue:
-            !Sub "${InfrastructureStorageStackName}-InfrastructureApplicationCodeBucket"
+          Fn::ImportValue: !Sub "${InfrastructureStorageStackName}-InfrastructureApplicationCodeBucket"
         CodeS3ObjectVersion: !Ref AnalyticsIngestLambdaCodeS3ObjectVersion
         EnvironmentType: !Ref EnvironmentType
         EnvironmentTypeAbbreviation: !Ref EnvironmentTypeAbbreviation
@@ -240,18 +219,14 @@ Resources:
     Type: "AWS::CloudFormation::Stack"
     Properties:
       NotificationARNs:
-        - Fn::ImportValue:
-            !Sub "${InfrastructureNotificationsStackName}-CloudFormationNotificationSnsTopic"
+        - Fn::ImportValue: !Sub "${InfrastructureNotificationsStackName}-CloudFormationNotificationSnsTopic"
       Parameters:
         OpsWarnMessagesSnsTopicArn:
-          Fn::ImportValue:
-            !Sub "${InfrastructureNotificationsStackName}-OpsWarnMessagesSnsTopicArn"
+          Fn::ImportValue: !Sub "${InfrastructureNotificationsStackName}-OpsWarnMessagesSnsTopicArn"
         OpsErrorMessagesSnsTopicArn:
-          Fn::ImportValue:
-            !Sub "${InfrastructureNotificationsStackName}-OpsErrorMessagesSnsTopicArn"
+          Fn::ImportValue: !Sub "${InfrastructureNotificationsStackName}-OpsErrorMessagesSnsTopicArn"
         OpsFatalMessagesSnsTopicArn:
-          Fn::ImportValue:
-            !Sub "${InfrastructureNotificationsStackName}-OpsFatalMessagesSnsTopicArn"
+          Fn::ImportValue: !Sub "${InfrastructureNotificationsStackName}-OpsFatalMessagesSnsTopicArn"
         EnvironmentType: !Ref EnvironmentType
         EnvironmentTypeAbbreviation: !Ref EnvironmentTypeAbbreviation
         BigqueryFunctionName: !GetAtt AnalyticsIngestLambdasStack.Outputs.BigqueryFunctionName
@@ -269,18 +244,14 @@ Resources:
     Type: "AWS::CloudFormation::Stack"
     Properties:
       NotificationARNs:
-        - Fn::ImportValue:
-            !Sub "${InfrastructureNotificationsStackName}-CloudFormationNotificationSnsTopic"
+        - Fn::ImportValue: !Sub "${InfrastructureNotificationsStackName}-CloudFormationNotificationSnsTopic"
       Parameters:
         OpsWarnMessagesSnsTopicArn:
-          Fn::ImportValue:
-            !Sub "${InfrastructureNotificationsStackName}-OpsWarnMessagesSnsTopicArn"
+          Fn::ImportValue: !Sub "${InfrastructureNotificationsStackName}-OpsWarnMessagesSnsTopicArn"
         OpsErrorMessagesSnsTopicArn:
-          Fn::ImportValue:
-            !Sub "${InfrastructureNotificationsStackName}-OpsErrorMessagesSnsTopicArn"
+          Fn::ImportValue: !Sub "${InfrastructureNotificationsStackName}-OpsErrorMessagesSnsTopicArn"
         OpsFatalMessagesSnsTopicArn:
-          Fn::ImportValue:
-            !Sub "${InfrastructureNotificationsStackName}-OpsFatalMessagesSnsTopicArn"
+          Fn::ImportValue: !Sub "${InfrastructureNotificationsStackName}-OpsFatalMessagesSnsTopicArn"
         EnvironmentType: !Ref EnvironmentType
         BigqueryFunctionArn: !GetAtt AnalyticsIngestLambdasStack.Outputs.BigqueryFunctionArn
         BigqueryFunctionName: !GetAtt AnalyticsIngestLambdasStack.Outputs.BigqueryFunctionName
@@ -301,18 +272,14 @@ Resources:
     Type: "AWS::CloudFormation::Stack"
     Properties:
       NotificationARNs:
-        - Fn::ImportValue:
-            !Sub "${InfrastructureNotificationsStackName}-CloudFormationNotificationSnsTopic"
+        - Fn::ImportValue: !Sub "${InfrastructureNotificationsStackName}-CloudFormationNotificationSnsTopic"
       Parameters:
         OpsWarnMessagesSnsTopicArn:
-          Fn::ImportValue:
-            !Sub "${InfrastructureNotificationsStackName}-OpsWarnMessagesSnsTopicArn"
+          Fn::ImportValue: !Sub "${InfrastructureNotificationsStackName}-OpsWarnMessagesSnsTopicArn"
         OpsErrorMessagesSnsTopicArn:
-          Fn::ImportValue:
-            !Sub "${InfrastructureNotificationsStackName}-OpsErrorMessagesSnsTopicArn"
+          Fn::ImportValue: !Sub "${InfrastructureNotificationsStackName}-OpsErrorMessagesSnsTopicArn"
         CodeS3Bucket:
-          Fn::ImportValue:
-            !Sub "${InfrastructureStorageStackName}-InfrastructureApplicationCodeBucket"
+          Fn::ImportValue: !Sub "${InfrastructureStorageStackName}-InfrastructureApplicationCodeBucket"
         CodeS3ObjectVersion: !Ref PixelPrxOrgCodeS3ObjectVersion
         EnvironmentType: !Ref EnvironmentType
         Destinations: !Sub "/prx/${EnvironmentTypeAbbreviation}/pixel.prx.org/DESTINATIONS"
