--- a/stacks/serverless/tower.radiotopia.fm.yml
+++ b/stacks/serverless/tower.radiotopia.fm.yml
@@ -27,12 +27,12 @@ Resources:
       AssumeRolePolicyDocument:
         Version: "2012-10-17"
         Statement:
-            - Effect: "Allow"
-              Principal:
-                Service:
-                  - "lambda.amazonaws.com"
-              Action:
-                - "sts:AssumeRole"
+          - Effect: "Allow"
+            Principal:
+              Service:
+                - "lambda.amazonaws.com"
+            Action:
+              - "sts:AssumeRole"
       Path: "/"
       ManagedPolicyArns:
         - "arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole"
@@ -84,8 +84,7 @@ Resources:
         - !Ref OpsWarnMessagesSnsTopicArn
       OKActions:
         - !Ref OpsWarnMessagesSnsTopicArn
-      AlarmDescription:
-        The error rate on the Tower lambda has exceeded 2
+      AlarmDescription: The error rate on the Tower lambda has exceeded 2
       ComparisonOperator: GreaterThanThreshold
       EvaluationPeriods: 1
       MetricName: Errors
@@ -109,8 +108,7 @@ Resources:
         - !Ref OpsWarnMessagesSnsTopicArn
       OKActions:
         - !Ref OpsWarnMessagesSnsTopicArn
-      AlarmDescription:
-        Throttles on the Tower lambda has exceeded 0
+      AlarmDescription: Throttles on the Tower lambda has exceeded 0
       ComparisonOperator: GreaterThanThreshold
       EvaluationPeriods: 1
       MetricName: Throttles
