--- a/stacks/serverless/upload.prx.org.yml
+++ b/stacks/serverless/upload.prx.org.yml
@@ -60,8 +60,8 @@ Resources:
               method.response.header.Access-Control-Allow-Methods: "'GET,OPTIONS'"
               method.response.header.Access-Control-Allow-Origin: "'*'"
             ResponseTemplates:
-              application/json: ''
-            StatusCode: '200'
+              application/json: ""
+            StatusCode: "200"
         RequestTemplates:
           application/json: '{"statusCode": 200}'
       MethodResponses:
@@ -71,7 +71,7 @@ Resources:
             method.response.header.Access-Control-Allow-Headers: true
             method.response.header.Access-Control-Allow-Methods: true
             method.response.header.Access-Control-Allow-Origin: true
-          StatusCode: '200'
+          StatusCode: "200"
   UploadRestApiOptionsMethod:
     Type: "AWS::ApiGateway::Method"
     Properties:
@@ -87,8 +87,8 @@ Resources:
               method.response.header.Access-Control-Allow-Methods: "'GET,OPTIONS'"
               method.response.header.Access-Control-Allow-Origin: "'*'"
             ResponseTemplates:
-              application/json: ''
-            StatusCode: '200'
+              application/json: ""
+            StatusCode: "200"
         PassthroughBehavior: NEVER
         RequestTemplates:
           application/json: '{"statusCode": 200}'
@@ -99,7 +99,7 @@ Resources:
             method.response.header.Access-Control-Allow-Headers: true
             method.response.header.Access-Control-Allow-Methods: true
             method.response.header.Access-Control-Allow-Origin: true
-          StatusCode: '200'
+          StatusCode: "200"
   UploadRestApiDeployment02:
     DependsOn:
       - UploadRestApiSignatureMethod
@@ -165,12 +165,12 @@ Resources:
       AssumeRolePolicyDocument:
         Version: "2012-10-17"
         Statement:
-            - Effect: "Allow"
-              Principal:
-                Service:
-                  - "lambda.amazonaws.com"
-              Action:
-                - "sts:AssumeRole"
+          - Effect: "Allow"
+            Principal:
+              Service:
+                - "lambda.amazonaws.com"
+            Action:
+              - "sts:AssumeRole"
       Path: "/"
       ManagedPolicyArns:
         - "arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole"
@@ -234,8 +234,7 @@ Resources:
         - !Ref OpsWarnMessagesSnsTopicArn
       OKActions:
         - !Ref OpsWarnMessagesSnsTopicArn
-      AlarmDescription:
-        Signing function has encountered an invocation error
+      AlarmDescription: Signing function has encountered an invocation error
       ComparisonOperator: GreaterThanThreshold
       EvaluationPeriods: 1
       MetricName: Errors
@@ -259,8 +258,7 @@ Resources:
         - !Ref OpsErrorMessagesSnsTopicArn
       OKActions:
         - !Ref OpsErrorMessagesSnsTopicArn
-      AlarmDescription:
-        Signing function has encountered several invocation errors
+      AlarmDescription: Signing function has encountered several invocation errors
       ComparisonOperator: GreaterThanThreshold
       DatapointsToAlarm: 2
       EvaluationPeriods: 10
@@ -285,8 +283,7 @@ Resources:
         - !Ref OpsWarnMessagesSnsTopicArn
       OKActions:
         - !Ref OpsWarnMessagesSnsTopicArn
-      AlarmDescription:
-        Signing function invocations are being throttled
+      AlarmDescription: Signing function invocations are being throttled
       ComparisonOperator: GreaterThanThreshold
       EvaluationPeriods: 1
       MetricName: Throttles
@@ -310,8 +307,7 @@ Resources:
         - !Ref OpsWarnMessagesSnsTopicArn
       OKActions:
         - !Ref OpsWarnMessagesSnsTopicArn
-      AlarmDescription:
-        Several signing function invocations were unusually slow
+      AlarmDescription: Several signing function invocations were unusually slow
       ComparisonOperator: GreaterThanThreshold
       DatapointsToAlarm: 2
       EvaluationPeriods: 3
@@ -336,8 +332,7 @@ Resources:
         - !Ref OpsWarnMessagesSnsTopicArn
       OKActions:
         - !Ref OpsWarnMessagesSnsTopicArn
-      AlarmDescription:
-        The number of signing function invocations has been unusually high for
+      AlarmDescription: The number of signing function invocations has been unusually high for
         several periods
       ComparisonOperator: GreaterThanThreshold
       DatapointsToAlarm: 2
@@ -363,8 +358,7 @@ Resources:
         - !Ref OpsErrorMessagesSnsTopicArn
       OKActions:
         - !Ref OpsErrorMessagesSnsTopicArn
-      AlarmDescription:
-        Short-term error rate has reached a dangerous level
+      AlarmDescription: Short-term error rate has reached a dangerous level
       ComparisonOperator: GreaterThanOrEqualToThreshold
       DatapointsToAlarm: 2
       EvaluationPeriods: 3
@@ -408,8 +402,7 @@ Resources:
         - !Ref OpsFatalMessagesSnsTopicArn
       OKActions:
         - !Ref OpsFatalMessagesSnsTopicArn
-      AlarmDescription:
-        Short-term error rate has reached a critical level
+      AlarmDescription: Short-term error rate has reached a critical level
       ComparisonOperator: GreaterThanOrEqualToThreshold
       EvaluationPeriods: 2
       Metrics:
