--- a/stacks/static-sites/root.yml
+++ b/stacks/static-sites/root.yml
@@ -62,8 +62,7 @@ Resources:
     Properties:
       Code:
         S3Bucket:
-          Fn::ImportValue:
-            !Sub ${InfrastructureStorageStackName}-InfrastructureSupportBucket
+          Fn::ImportValue: !Sub ${InfrastructureStorageStackName}-InfrastructureSupportBucket
         S3Key: utility/s3-static-site-deploy.zip
       Description: Deploys the contents of a zip archive to an S3 bucket
       Handler: lambda_function.lambda_handler
@@ -88,12 +87,10 @@ Resources:
     Type: "AWS::CloudFormation::Stack"
     Properties:
       NotificationARNs:
-        - Fn::ImportValue:
-            !Sub "${InfrastructureNotificationsStackName}-CloudFormationNotificationSnsTopic"
+        - Fn::ImportValue: !Sub "${InfrastructureNotificationsStackName}-CloudFormationNotificationSnsTopic"
       Parameters:
         CodeS3Bucket:
-          Fn::ImportValue:
-            !Sub "${InfrastructureStorageStackName}-InfrastructureApplicationCodeBucket"
+          Fn::ImportValue: !Sub "${InfrastructureStorageStackName}-InfrastructureApplicationCodeBucket"
         StaticSiteArchiveS3ObjectVersion: !Ref BacksawArchiveS3ObjectVersion
         EnvironmentType: !Ref EnvironmentType
         S3StaticSiteDeployFunctionArn: !GetAtt S3StaticSiteDeployFunction.Arn
@@ -109,12 +106,10 @@ Resources:
     Type: "AWS::CloudFormation::Stack"
     Properties:
       NotificationARNs:
-        - Fn::ImportValue:
-            !Sub "${InfrastructureNotificationsStackName}-CloudFormationNotificationSnsTopic"
+        - Fn::ImportValue: !Sub "${InfrastructureNotificationsStackName}-CloudFormationNotificationSnsTopic"
       Parameters:
         CodeS3Bucket:
-          Fn::ImportValue:
-            !Sub "${InfrastructureStorageStackName}-InfrastructureApplicationCodeBucket"
+          Fn::ImportValue: !Sub "${InfrastructureStorageStackName}-InfrastructureApplicationCodeBucket"
         StaticSiteArchiveS3ObjectVersion: !Ref BetaPrxOrgArchiveS3ObjectVersion
         EnvironmentType: !Ref EnvironmentType
         S3StaticSiteDeployFunctionArn: !GetAtt S3StaticSiteDeployFunction.Arn
