--- a/db/postgresql-instance.yml
+++ b/db/postgresql-instance.yml
@@ -200,10 +200,8 @@ Resources:
       DBSubnetGroupDescription: !Sub ${UniqueName} ${EnvironmentType} Subnet Group
       DBSubnetGroupName: !Sub ${UniqueName}-${EnvironmentType}-Postgres
       SubnetIds:
-        - Fn::ImportValue:
-            !Sub ${VPCStackName}-Subnet1
-        - Fn::ImportValue:
-            !Sub ${VPCStackName}-Subnet2
+        - Fn::ImportValue: !Sub ${VPCStackName}-Subnet1
+        - Fn::ImportValue: !Sub ${VPCStackName}-Subnet2
       Tags:
         - Key: Project
           Value: !Ref ProjectName
