--- a/etc/cloudwatch-data-sharing-org-list-role.yml
+++ b/etc/cloudwatch-data-sharing-org-list-role.yml
@@ -1,5 +1,5 @@
 # etc/cloudwatch-data-sharing-org-list-role.yml
-AWSTemplateFormatVersion: '2010-09-09'
+AWSTemplateFormatVersion: "2010-09-09"
 Description: >-
   Creates a IAM role with the special name
   CloudWatch-CrossAccountSharing-ListAccountsRole, which CloudWatch uses for
@@ -24,12 +24,12 @@ Resources:
             Effect: Allow
             Principal:
               AWS: !Split
-                - ','
+                - ","
                 - !Sub
-                  - 'arn:aws:iam::${inner}:root'
+                  - "arn:aws:iam::${inner}:root"
                   - inner: !Join
-                    - ':root,arn:aws:iam::'
-                    - Ref: MonitoringAccountIds
+                      - ":root,arn:aws:iam::"
+                      - Ref: MonitoringAccountIds
         Version: "2012-10-17"
       Policies:
         - PolicyDocument:
