--- a/etc/squarespace-commerce-webhooks.yml
+++ b/etc/squarespace-commerce-webhooks.yml
@@ -63,12 +63,12 @@ Resources:
       AssumeRolePolicyDocument:
         Version: "2012-10-17"
         Statement:
-            - Effect: Allow
-              Principal:
-                Service:
-                  - lambda.amazonaws.com
-              Action:
-                - sts:AssumeRole
+          - Effect: Allow
+            Principal:
+              Service:
+                - lambda.amazonaws.com
+            Action:
+              - sts:AssumeRole
       Path: "/"
       Policies:
         - PolicyName: SnsPolicy
@@ -236,8 +236,7 @@ Resources:
         - !Ref OpsErrorMessagesSnsTopicArn
       OKActions:
         - !Ref OpsErrorMessagesSnsTopicArn
-      AlarmDescription:
-        The error rate on the Squarespace sales lambda has exceeded 0
+      AlarmDescription: The error rate on the Squarespace sales lambda has exceeded 0
       ComparisonOperator: GreaterThanThreshold
       EvaluationPeriods: 1
       MetricName: Errors
