--- a/package.json
+++ b/package.json
@@ -11,20 +11,20 @@
     "aws-xray-sdk": "^3.0.0"
   },
   "devDependencies": {
+    "@octokit/rest": "^18.2.0",
+    "@types/aws-lambda": "^8.10.63",
     "aws-sdk-mock": "^5.1.0",
     "dotenv": "^8.2.0",
-    "eslint": "^6.8.0",
+    "eslint": "^7.20.0",
     "eslint-config-airbnb-base": "^14.1.0",
-    "eslint-config-prettier": "^6.11.0",
+    "eslint-config-prettier": "^7.2.0",
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-jest": "^24.1.0",
-    "eslint-plugin-prettier": "^3.1.3",
+    "eslint-plugin-prettier": "^3.3.1",
     "jest": "^26.0.1",
-    "prettier": "^2.0.5",
+    "prettier": "^2.2.1",
     "typescript": "^4.0",
-    "yaml-cfn": "^0.2.3",
-    "@types/aws-lambda": "^8.10.63",
-    "@octokit/rest": "^18.0.6"
+    "yaml-cfn": "^0.2.3"
   },
   "scripts": {
     "eslint": "eslint",
